Update plot parameters

--- a/configs/plots/papers/G333.12-0.56_moments_ch3oh_c5c8.cfg
+++ b/configs/plots/papers/G333.12-0.56_moments_ch3oh_c5c8.cfg
@@ -50,7 +50,7 @@ stretch = linear
 # Contours
 self_contours = false
 vmin = 0 km*mJy/beam/s
-vmax = 100 km*mJy/beam/s
+vmax = 110 km*mJy/beam/s
 # Beam
 plot_beam = true
 beam_color = w
@@ -61,7 +61,7 @@ image = ${results}/CH3OH_18_3_15_-17_4_14_A_vt_0.subcube.moment1.fits
 name = Velocity
 unit = km/s
 shift_data = 58.47 km/s
-label = moment 1
+label = moment 1 ($$v_{LSR} = -58.47$$ km/s)
 stretch = linear
 with_style = vik
 compute_ticks = false
@@ -104,7 +104,7 @@ stretch = linear
 # Contours
 self_contours = false
 vmin = 0 km*mJy/beam/s
-vmax = 100 km*mJy/beam/s
+vmax = 220 km*mJy/beam/s
 # Beam
 plot_beam = true
 beam_color = w
@@ -118,8 +118,9 @@ loc = 1 1
 image = ${results}/CH3OH_18_3_15_-17_4_14_A_vt_0.subcube.moment1.fits
 name = Velocity
 unit = km/s
-shift_data = 58.47 km/s
-label = moment 1
+#shift_data = 58.47 km/s
+shift_data = 52.44 km/s
+label = moment 1 ($$v_{LSR} = -52.44$$ km/s)
 stretch = linear
 with_style = vik
 compute_ticks = false
