--- a/configs/plots/papers/G333.23-0.06_moments_ch3oh_c5c8.cfg
+++ b/configs/plots/papers/G333.23-0.06_moments_ch3oh_c5c8.cfg
@@ -1,7 +1,7 @@
 [DEFAULT]
 ncols = 3
 nrows = 2
-sharex = true
+sharex = false
 sharey = true
 styles = maps inferno
 vertical_cbar = false
@@ -19,7 +19,7 @@ yticks_fmt = dd:mm:ss.s
 contour_linewidth = 0.5
 # Recenter
 center = 16h19m50.879s -50d15m10.487s icrs
-radius = 0.7 arcsec
+radius = 0.4 arcsec
 # Units
 ignore_units = false
 labelpad = 5
@@ -50,7 +50,7 @@ stretch = linear
 # Contours
 self_contours = false
 vmin = 0 km*mJy/beam/s
-vmax = 100 km*mJy/beam/s
+vmax = 140 km*mJy/beam/s
 # Beam
 plot_beam = true
 beam_color = w
@@ -61,7 +61,7 @@ image = ${results}/CH3OH_18_3_15_-17_4_14_A_vt_0.subcube.moment1.fits
 name = Velocity
 unit = km/s
 shift_data = 87.04 km/s
-label = moment 1
+label = moment 1 ($$v_{LSR} = -87.04$$ km/s)
 stretch = linear
 with_style = vik
 compute_ticks = false
@@ -119,7 +119,7 @@ image = ${results}/CH3OH_18_3_15_-17_4_14_A_vt_0.subcube.moment1.fits
 name = Velocity
 unit = km/s
 shift_data = 84.96 km/s
-label = moment 1
+label = moment 1 ($$v_{LSR} = -84.96$$ km/s)
 stretch = linear
 with_style = vik
 compute_ticks = false
