--- a/configs/plots/papers/G333.46-0.16_moments_ch3oh_c5c8.cfg
+++ b/configs/plots/papers/G333.46-0.16_moments_ch3oh_c5c8.cfg
@@ -50,7 +50,7 @@ stretch = linear
 # Contours
 self_contours = false
 vmin = 0 km*mJy/beam/s
-vmax = 100 km*mJy/beam/s
+vmax = 180 km*mJy/beam/s
 # Beam
 plot_beam = true
 beam_color = w
@@ -60,8 +60,8 @@ loc = 0 1
 image = ${results}/CH3OH_18_3_15_-17_4_14_A_vt_0.subcube.moment1.fits
 name = Velocity
 unit = km/s
-shift_data = 44.057 km/s
-label = moment 1
+shift_data = 44.12 km/s
+label = moment 1 ($$v_{LSR} = -44.12$$ km/s)
 stretch = linear
 with_style = vik
 compute_ticks = false
@@ -69,8 +69,8 @@ ticks_color = k
 scale_color = k
 # Contours
 self_contours = false
-vmin = -6 km/s
-vmax = 6 km/s
+vmin = -3 km/s
+vmax = 3 km/s
 # Beam
 plot_beam = true
 beam_color = k
@@ -88,7 +88,7 @@ scale_color = k
 # Contours
 self_contours = false
 vmin = 0 km/s
-vmax = 10 km/s
+vmax = 5 km/s
 a = 100
 # Beam
 plot_beam = true
@@ -110,7 +110,7 @@ plot_beam = true
 beam_color = w
 # Recenter
 center = 16h21m20.171s -50d09m48.902s icrs
-radius = 0.6 arcsec
+radius = 0.4 arcsec
 scale = 16h21m20.124s -50d09m49.416s icrs
 
 [moment1_c2]
@@ -119,7 +119,7 @@ image = ${results}/CH3OH_18_3_15_-17_4_14_A_vt_0.subcube.moment1.fits
 name = Velocity
 unit = km/s
 shift_data = 45.15 km/s
-label = moment 1
+label = moment 1 ($$v_{LSR} = -45.15$$ km/s)
 stretch = linear
 with_style = vik
 compute_ticks = false
@@ -134,7 +134,7 @@ plot_beam = true
 beam_color = k
 # Recenter
 center = 16h21m20.171s -50d09m48.902s icrs
-radius = 0.6 arcsec
+radius = 0.4 arcsec
 scale = 16h21m20.124s -50d09m49.416s icrs
 
 [moment2_c2]
@@ -150,14 +150,14 @@ scale_color = k
 # Contours
 self_contours = false
 vmin = 0 km/s
-vmax = 10 km/s
+vmax = 7 km/s
 a = 100
 # Beam
 plot_beam = true
 beam_color = k
 # Recenter
 center = 16h21m20.171s -50d09m48.902s icrs
-radius = 0.6 arcsec
+radius = 0.4 arcsec
 scale = 16h21m20.124s -50d09m49.416s icrs
 
 [continuum]
