--- a/configs/plots/papers/G35.20-0.74_N_moments_ch3oh_c5c8.cfg
+++ b/configs/plots/papers/G35.20-0.74_N_moments_ch3oh_c5c8.cfg
@@ -50,7 +50,7 @@ stretch = linear
 # Contours
 self_contours = false
 vmin = 0 km*mJy/beam/s
-vmax = 100 km*mJy/beam/s
+vmax = 440 km*mJy/beam/s
 # Beam
 plot_beam = true
 beam_color = w
@@ -60,8 +60,8 @@ loc = 0 1
 image = ${results}/CH3OH_18_3_15_-17_4_14_A_vt_0.subcube.moment1.fits
 name = Velocity
 unit = km/s
-shift_data = -32.113 km/s
-label = moment 1
+shift_data = -32.20 km/s
+label = moment 1 ($$v_{LSR} = 32.20$$ km/s)
 stretch = linear
 with_style = vik
 compute_ticks = false
@@ -69,8 +69,8 @@ ticks_color = k
 scale_color = k
 # Contours
 self_contours = false
-vmin = -6 km/s
-vmax = 6 km/s
+vmin = -2 km/s
+vmax = 2 km/s
 # Beam
 plot_beam = true
 beam_color = k
@@ -88,7 +88,7 @@ scale_color = k
 # Contours
 self_contours = false
 vmin = 0 km/s
-vmax = 10 km/s
+vmax = 5 km/s
 a = 100
 # Beam
 plot_beam = true
