--- a/configs/plots/papers/G351.77-0.54_moments_ch3oh_c5c8.cfg
+++ b/configs/plots/papers/G351.77-0.54_moments_ch3oh_c5c8.cfg
@@ -50,7 +50,7 @@ stretch = linear
 # Contours
 self_contours = false
 vmin = 0 km*mJy/beam/s
-vmax = 100 km*mJy/beam/s
+vmax = 350 km*mJy/beam/s
 # Beam
 plot_beam = true
 beam_color = w
@@ -60,8 +60,8 @@ loc = 0 1
 image = ${results}/CH3OH_18_3_15_-17_4_14_A_vt_0.subcube.moment1.fits
 name = Velocity
 unit = km/s
-shift_data = 3.825 km/s
-label = moment 1
+shift_data = 3.83 km/s
+label = moment 1 ($$v_{LSR} = -3.83$$ km/s)
 stretch = linear
 with_style = vik
 compute_ticks = false
