--- a/configs/plots/papers/NGC_6334_I_N_moments_ch3oh_c5c8.cfg
+++ b/configs/plots/papers/NGC_6334_I_N_moments_ch3oh_c5c8.cfg
@@ -294,7 +294,7 @@ scale = 17h20m54.529s -35d45m18.049s icrs
 
 [continuum]
 loc = 0 0, 0 1, 0 2, 1 0, 1 1, 1 2, 2 0, 2 1, 2 2, 3 0, 3 1, 3 2
-contour = ${contdir}/
+contour = ${contdir}/NGC_6334_I_N.config8.cont_avg.selfcal_0.5_hogbom.image.fits
 #contour_colors = #333333
 contour_colors = #7f7f7f
 contour_stretch = log
