--- a/configs/plots/papers/G5.89-0.37_moments_ch3oh_c5c8.cfg
+++ b/configs/plots/papers/G5.89-0.37_moments_ch3oh_c5c8.cfg
@@ -18,7 +18,7 @@ xticks_fmt = hh:mm:ss.ss
 yticks_fmt = dd:mm:ss.s
 contour_linewidth = 0.5
 # Recenter
-center = 18:00:30.497s -24:04:00.546s icrs
+center = 18h00m30.497s -24d04m00.546s icrs
 radius = 0.5 arcsec
 # Units
 ignore_units = false
