--- a/configs/plots/papers/IRAS_18182-1433_moments_ch3oh_c5c8.cfg
+++ b/configs/plots/papers/IRAS_18182-1433_moments_ch3oh_c5c8.cfg
@@ -50,7 +50,7 @@ stretch = linear
 # Contours
 self_contours = false
 vmin = 0 km*mJy/beam/s
-vmax = 100 km*mJy/beam/s
+vmax = 230 km*mJy/beam/s
 # Beam
 plot_beam = true
 beam_color = w
@@ -61,7 +61,7 @@ image = ${results}/CH3OH_18_3_15_-17_4_14_A_vt_0.subcube.moment1.fits
 name = Velocity
 unit = km/s
 shift_data = -61.12 km/s
-label = moment 1
+label = moment 1 ($$v_{LSR} = 61.12$$ km/s)
 stretch = linear
 with_style = vik
 compute_ticks = false
@@ -118,8 +118,8 @@ loc = 1 1
 image = ${results}/CH3OH_18_3_15_-17_4_14_A_vt_0.subcube.moment1.fits
 name = Velocity
 unit = km/s
-shift_data = -60.635 km/s
-label = moment 1
+shift_data = -60.64 km/s
+label = moment 1 ($$v_{LSR} = 60.64$$ km/s)
 stretch = linear
 with_style = vik
 compute_ticks = false
@@ -133,6 +133,9 @@ vmax = 6 km/s
 plot_beam = true
 beam_color = k
 # Recenter
+center = 18h21m09.009s -14d31m47.721s icrs
+radius = 0.9 arcsec
+scale = 18h21m08.957s -14d31m48.446s icrs
 
 [moment2_c2]
 loc = 1 2
@@ -153,6 +156,9 @@ a = 100
 plot_beam = true
 beam_color = k
 # Recenter
+center = 18h21m09.009s -14d31m47.721s icrs
+radius = 0.9 arcsec
+scale = 18h21m08.957s -14d31m48.446s icrs
 
 [continuum]
 loc = 0 0, 0 1, 0 2, 1 0, 1 1, 1 2
