--- a/configs/plots/papers/G14.22-0.50_S_moments_ch3oh_c5c8.cfg
+++ b/configs/plots/papers/G14.22-0.50_S_moments_ch3oh_c5c8.cfg
@@ -50,7 +50,7 @@ stretch = linear
 # Contours
 self_contours = false
 vmin = 0 km*mJy/beam/s
-vmax = 100 km*mJy/beam/s
+vmax = 80 km*mJy/beam/s
 # Beam
 plot_beam = true
 beam_color = w
@@ -61,7 +61,7 @@ image = ${results}/CH3OH_18_3_15_-17_4_14_A_vt_0.subcube.moment1.fits
 name = Velocity
 unit = km/s
 shift_data = -22.698 km/s
-label = moment 1
+label = moment 1 ($$v_{LSR} = 22.69$$ km/s)
 stretch = linear
 with_style = vik
 compute_ticks = false
@@ -104,7 +104,7 @@ stretch = linear
 # Contours
 self_contours = false
 vmin = 0 km*mJy/beam/s
-vmax = 100 km*mJy/beam/s
+vmax = 70 km*mJy/beam/s
 # Beam
 plot_beam = true
 beam_color = w
@@ -118,8 +118,8 @@ loc = 1 1
 image = ${results}/CH3OH_18_3_15_-17_4_14_A_vt_0.subcube.moment1.fits
 name = Velocity
 unit = km/s
-shift_data = -22.698 km/s
-label = moment 1
+shift_data = -19.24 km/s
+label = moment 1 ($$v_{LSR} = 19.24$$ km/s)
 stretch = linear
 with_style = vik
 compute_ticks = false
@@ -127,8 +127,8 @@ ticks_color = k
 scale_color = k
 # Contours
 self_contours = false
-vmin = -6 km/s
-vmax = 6 km/s
+vmin = -3 km/s
+vmax = 3 km/s
 # Beam
 plot_beam = true
 beam_color = k
@@ -150,7 +150,7 @@ scale_color = k
 # Contours
 self_contours = false
 vmin = 0 km/s
-vmax = 10 km/s
+vmax = 4 km/s
 a = 100
 # Beam
 plot_beam = true
