--- a/configs/plots/papers/G35.13-0.74_moments_ch3oh_c5c8.cfg
+++ b/configs/plots/papers/G35.13-0.74_moments_ch3oh_c5c8.cfg
@@ -50,7 +50,7 @@ stretch = linear
 # Contours
 self_contours = false
 vmin = 0 km*mJy/beam/s
-vmax = 100 km*mJy/beam/s
+vmax = 390 km*mJy/beam/s
 # Beam
 plot_beam = true
 beam_color = w
@@ -60,8 +60,8 @@ loc = 0 1
 image = ${results}/CH3OH_18_3_15_-17_4_14_A_vt_0.subcube.moment1.fits
 name = Velocity
 unit = km/s
-shift_data = -35.93 km/s
-label = moment 1
+shift_data = -34.1 km/s
+label = moment 1 ($$v_{LSR} = 34.10$$ km/s)
 stretch = linear
 with_style = vik
 compute_ticks = false
@@ -88,7 +88,7 @@ scale_color = k
 # Contours
 self_contours = false
 vmin = 0 km/s
-vmax = 10 km/s
+vmax = 8 km/s
 a = 100
 # Beam
 plot_beam = true
@@ -104,12 +104,12 @@ stretch = linear
 # Contours
 self_contours = false
 vmin = 0 km*mJy/beam/s
-vmax = 100 km*mJy/beam/s
+vmax = 230 km*mJy/beam/s
 # Beam
 plot_beam = true
 beam_color = w
 # Recenter
-center = 18:58:06.1667388911s 1:37:08.1629956597s icrs
+center = 18h58m06.166s 1d37m08.162s icrs
 radius = 0.4 arcsec
 scale = 18h58m06.143s 1d37m07.849s icrs
 
@@ -118,8 +118,8 @@ loc = 1 1
 image = ${results}/CH3OH_18_3_15_-17_4_14_A_vt_0.subcube.moment1.fits
 name = Velocity
 unit = km/s
-shift_data = -34.39 km/s
-label = moment 1
+shift_data = -34.81 km/s
+label = moment 1 ($$v_{LSR} = 34.87$$ km/s)
 stretch = linear
 with_style = vik
 compute_ticks = false
@@ -127,13 +127,13 @@ ticks_color = k
 scale_color = k
 # Contours
 self_contours = false
-vmin = -6 km/s
-vmax = 6 km/s
+vmin = -3 km/s
+vmax = 3 km/s
 # Beam
 plot_beam = true
 beam_color = k
 # Recenter
-center = 18:58:06.1667388911s 1:37:08.1629956597s icrs
+center = 18h58m06.166s 1d37m08.162s icrs
 radius = 0.4 arcsec
 scale = 18h58m06.143s 1d37m07.849s icrs
 
@@ -156,12 +156,12 @@ a = 100
 plot_beam = true
 beam_color = k
 # Recenter
-center = 18:58:06.1667388911s 1:37:08.1629956597s icrs
+center = 18h58m06.166s 1d37m08.162s icrs
 radius = 0.4 arcsec
 scale = 18h58m06.143s 1d37m07.849s icrs
 
 [moment0_c3]
-loc = 1 0
+loc = 2 0
 image = ${results}/CH3OH_18_3_15_-17_4_14_A_vt_0.subcube.moment0.fits
 name = Intensity
 unit = km*mJy/beam/s
@@ -170,7 +170,7 @@ stretch = linear
 # Contours
 self_contours = false
 vmin = 0 km*mJy/beam/s
-vmax = 100 km*mJy/beam/s
+vmax = 180 km*mJy/beam/s
 # Beam
 plot_beam = true
 beam_color = w
@@ -180,12 +180,12 @@ radius = 0.4 arcsec
 scale = 18h58m06.25s 1d37m06.904s icrs
 
 [moment1_c3]
-loc = 1 1
+loc = 2 1
 image = ${results}/CH3OH_18_3_15_-17_4_14_A_vt_0.subcube.moment1.fits
 name = Velocity
 unit = km/s
-shift_data = -35.527 km/s
-label = moment 1
+shift_data = -35.96 km/s
+label = moment 1 ($$v_{LSR} = 35.96$$ km/s)
 stretch = linear
 with_style = vik
 compute_ticks = false
@@ -193,8 +193,8 @@ ticks_color = k
 scale_color = k
 # Contours
 self_contours = false
-vmin = -6 km/s
-vmax = 6 km/s
+vmin = -3 km/s
+vmax = 3 km/s
 # Beam
 plot_beam = true
 beam_color = k
@@ -204,7 +204,7 @@ radius = 0.4 arcsec
 scale = 18h58m06.25s 1d37m06.904s icrs
 
 [moment2_c3]
-loc = 1 2
+loc = 2 2
 image = ${results}/CH3OH_18_3_15_-17_4_14_A_vt_0.subcube.moment2.fits
 name = Linewidth
 unit = km/s
@@ -216,7 +216,7 @@ scale_color = k
 # Contours
 self_contours = false
 vmin = 0 km/s
-vmax = 10 km/s
+vmax = 7 km/s
 a = 100
 # Beam
 plot_beam = true
