--- a/configs/plots/papers/IRAS_180891732_moments_ch3oh_c5c8.cfg
+++ b/configs/plots/papers/IRAS_180891732_moments_ch3oh_c5c8.cfg
@@ -50,7 +50,7 @@ stretch = linear
 # Contours
 self_contours = false
 vmin = 0 km*mJy/beam/s
-vmax = 100 km*mJy/beam/s
+vmax = 210 km*mJy/beam/s
 # Beam
 plot_beam = true
 beam_color = w
@@ -60,8 +60,8 @@ loc = 0 1
 image = ${results}/CH3OH_18_3_15_-17_4_14_A_vt_0.subcube.moment1.fits
 name = Velocity
 unit = km/s
-shift_data = -32.875 km/s
-label = moment 1
+shift_data = -32.88 km/s
+label = moment 1 ($$v_{LSR} = 32.88$$ km/s)
 stretch = linear
 with_style = vik
 compute_ticks = false
@@ -104,7 +104,7 @@ stretch = linear
 # Contours
 self_contours = false
 vmin = 0 km*mJy/beam/s
-vmax = 100 km*mJy/beam/s
+vmax = 170 km*mJy/beam/s
 # Beam
 plot_beam = true
 beam_color = w
@@ -119,7 +119,7 @@ image = ${results}/CH3OH_18_3_15_-17_4_14_A_vt_0.subcube.moment1.fits
 name = Velocity
 unit = km/s
 shift_data = -33.02 km/s
-label = moment 1
+label = moment 1 ($$v_{LSR} = 33.02$$ km/s)
 stretch = linear
 with_style = vik
 compute_ticks = false
