--- a/configs/plots/papers/NGC_6334_I_N_moments_ch3oh_c5c8.cfg
+++ b/configs/plots/papers/NGC_6334_I_N_moments_ch3oh_c5c8.cfg
@@ -50,7 +50,7 @@ stretch = linear
 # Contours
 self_contours = false
 vmin = 0 km*mJy/beam/s
-vmax = 100 km*mJy/beam/s
+vmax = 150 km*mJy/beam/s
 # Beam
 plot_beam = true
 beam_color = w
@@ -60,8 +60,8 @@ loc = 0 1
 image = ${results}/CH3OH_18_3_15_-17_4_14_A_vt_0.subcube.moment1.fits
 name = Velocity
 unit = km/s
-shift_data = 1.768 km/s
-label = moment 1
+shift_data = 1.77 km/s
+label = moment 1 ($$v_{LSR} = -1.77$$ km/s)
 stretch = linear
 with_style = vik
 compute_ticks = false
@@ -104,7 +104,7 @@ stretch = linear
 # Contours
 self_contours = false
 vmin = 0 km*mJy/beam/s
-vmax = 100 km*mJy/beam/s
+vmax = 310 km*mJy/beam/s
 # Beam
 plot_beam = true
 beam_color = w
@@ -118,8 +118,8 @@ loc = 1 1
 image = ${results}/CH3OH_18_3_15_-17_4_14_A_vt_0.subcube.moment1.fits
 name = Velocity
 unit = km/s
-shift_data = 7.59 km/s
-label = moment 1
+shift_data = 6.75 km/s
+label = moment 1 ($$v_{LSR} = -6.75$$ km/s)
 stretch = linear
 with_style = vik
 compute_ticks = false
@@ -161,7 +161,7 @@ radius = 0.7 arcsec
 scale = 17h20m54.574s -35d45m09.267s icrs
 
 [moment0_c3]
-loc = 1 0
+loc = 2 0
 image = ${results}/CH3OH_18_3_15_-17_4_14_A_vt_0.subcube.moment0.fits
 name = Intensity
 unit = km*mJy/beam/s
@@ -170,7 +170,7 @@ stretch = linear
 # Contours
 self_contours = false
 vmin = 0 km*mJy/beam/s
-vmax = 100 km*mJy/beam/s
+vmax = 150 km*mJy/beam/s
 # Beam
 plot_beam = true
 beam_color = w
@@ -180,12 +180,12 @@ radius = 0.7 arcsec
 scale = 17h20m54.822s -35d45m06.913s icrs
 
 [moment1_c3]
-loc = 1 1
+loc = 2 1
 image = ${results}/CH3OH_18_3_15_-17_4_14_A_vt_0.subcube.moment1.fits
 name = Velocity
 unit = km/s
-shift_data = 6.797 km/s
-label = moment 1
+shift_data = 6.80 km/s
+label = moment 1 ($$v_{LSR} = -6.80$$ km/s)
 stretch = linear
 with_style = vik
 compute_ticks = false
@@ -204,7 +204,7 @@ radius = 0.7 arcsec
 scale = 17h20m54.822s -35d45m06.913s icrs
 
 [moment2_c3]
-loc = 1 2
+loc = 2 2
 image = ${results}/CH3OH_18_3_15_-17_4_14_A_vt_0.subcube.moment2.fits
 name = Linewidth
 unit = km/s
@@ -216,7 +216,7 @@ scale_color = k
 # Contours
 self_contours = false
 vmin = 0 km/s
-vmax = 10 km/s
+vmax = 6 km/s
 a = 100
 # Beam
 plot_beam = true
@@ -236,7 +236,7 @@ stretch = linear
 # Contours
 self_contours = false
 vmin = 0 km*mJy/beam/s
-vmax = 100 km*mJy/beam/s
+vmax = 140 km*mJy/beam/s
 # Beam
 plot_beam = true
 beam_color = w
@@ -250,8 +250,8 @@ loc = 3 1
 image = ${results}/CH3OH_18_3_15_-17_4_14_A_vt_0.subcube.moment1.fits
 name = Velocity
 unit = km/s
-shift_data = -3.207 km/s
-label = moment 1
+shift_data = 2.53 km/s
+label = moment 1 ($$v_{LSR} = -2.53$$ km/s)
 stretch = linear
 with_style = vik
 compute_ticks = false
@@ -259,8 +259,8 @@ ticks_color = k
 scale_color = k
 # Contours
 self_contours = false
-vmin = -6 km/s
-vmax = 6 km/s
+vmin = -3 km/s
+vmax = 3 km/s
 # Beam
 plot_beam = true
 beam_color = k
@@ -282,7 +282,7 @@ scale_color = k
 # Contours
 self_contours = false
 vmin = 0 km/s
-vmax = 10 km/s
+vmax = 8 km/s
 a = 100
 # Beam
 plot_beam = true
