--- a/configs/extracted/G11.92-0.61_hmc3.cfg
+++ b/configs/extracted/G11.92-0.61_hmc3.cfg
@@ -18,4 +18,5 @@ type = spectral_cube
 file = ${subcubes}/spw0_from_CH3OH.structure7.subcube.fits
 rms = 1.2 mJy/beam
 molecules = CH3OH
+chan_width = 976 kHz
 
