--- a/configs/extracted/pvmaps/template.cfg
+++ b/configs/extracted/pvmaps/template.cfg
@@ -1,7 +1,7 @@
 [DEFAULT]
 #basedir = /data/share/binary_project/configs
 moldir = /Volumes/Pegasus32 R8/dihca/scripts/molecules
-pas = 
+pas = deg
 
 [CH3OH_spw0]
 molecule = CH3OH
