--- a/configs/extracted/G11.92-0.61_hmc1.cfg
+++ b/configs/extracted/G11.92-0.61_hmc1.cfg
@@ -4,7 +4,8 @@ ra = 18h13m58.11097s
 dec = -18d54m20.2010s
 frame = icrs
 distance = 3.37 kpc
-vlsr = 35.0 km/s
+# From CH3OH 0.05'' at ra,dec
+vlsr = 32.77 km/s
 radius = 0.0534 arcsec
 sourcedata = /Volumes/Pegasus32 R8/dihca/source_data
 subcubes = /Volumes/Pegasus32 R8/dihca/results/${name}/c5c8/per_hot_core/
