--- a/configs/extracted/G14.22-0.50_S_hmc1.cfg
+++ b/configs/extracted/G14.22-0.50_S_hmc1.cfg
@@ -18,4 +18,12 @@ type = spectral_cube
 file = ${subcubes}/spw0_from_CH3OH.structure1.subcube.fits
 rms = 1.5 mJy/beam
 molecules = CH3OH
+chan_width = 488 kHz
+
+[b6_c5c8_spw0_1000_CH3OH_18_3_15_-17_4_14_A_vt_0]
+type = spectral_cube
+file = ../results/G14.22-0.50_S/c5c8/per_hot_core/line_cubes/hmc1_CH3OH_18_3_15_-17_4_14_A_vt_0_nchans40.fits
+rms = 1.5 mJy/beam
+molecules = CH3OH
+chan_width = 488 kHz
 
