--- a/configs/plots/IRAS_180891732_c5c8_CH3OH_4_2_3_-5_1_4_A_vt_0.cfg
+++ b/configs/plots/IRAS_180891732_c5c8_CH3OH_4_2_3_-5_1_4_A_vt_0.cfg
@@ -25,7 +25,7 @@ contour_colors = #7f7f7f
 contour_linewidth = 0.5
 bunit = mJy km / beam s
 a = 100
-moment = /data/share/binary_project/results/IRAS_180891732/c5c8/CH3OH/CH3OH_4_2_3_-5_1_4_A_vt_0.subcube.moment0.fits
+moment = /Volumes/Pegasus32 R8/dihca/results/IRAS_180891732/c5c8/CH3OH/CH3OH_4_2_3_-5_1_4_A_vt_0.subcube.moment0.fits
 center = 18h11m51.4549s -17d31m28.8108s icrs
 label = Moment 0
 title = CH3OH (4(2,3)-5(1,4)A,vt=0)
@@ -38,7 +38,7 @@ with_style = bwr
 bname = Velocity
 bunit = km/s
 ticks_color = k
-moment = /data/share/binary_project/results/IRAS_180891732/c5c8/CH3OH/CH3OH_4_2_3_-5_1_4_A_vt_0.subcube.moment1.fits
+moment = /Volumes/Pegasus32 R8/dihca/results/IRAS_180891732/c5c8/CH3OH/CH3OH_4_2_3_-5_1_4_A_vt_0.subcube.moment1.fits
 center = 18h11m51.4549s -17d31m28.8108s icrs
 label = Moment 1
 shift_data = -32.9 km/s
@@ -49,7 +49,7 @@ stretch = linear
 bname = Line width
 bunit = km/s
 ticks_color = k
-moment = /data/share/binary_project/results/IRAS_180891732/c5c8/CH3OH/CH3OH_4_2_3_-5_1_4_A_vt_0.subcube.moment2.fits
+moment = /Volumes/Pegasus32 R8/dihca/results/IRAS_180891732/c5c8/CH3OH/CH3OH_4_2_3_-5_1_4_A_vt_0.subcube.moment2.fits
 center = 18h11m51.4549s -17d31m28.8108s icrs
 label = Moment 2
 
@@ -60,5 +60,5 @@ contour_colors = g
 negative_nsigma = 3
 plot_beam = false
 ignore_units = true
-contour = /data/share/binary_project/source_data/IRAS_180891732/final_data/config8/IRAS_180891732.config8.cont_avg.selfcal_0.5_hogbom.image.fits
+contour = /Volumes/Pegasus32 R8/dihca/source_data/continuum/IRAS_180891732.config8.cont_avg.selfcal_0.5_hogbom.image.fits
 
