Update pvmaps configs

--- a/configs/extracted/G335.579-0.272_hmc2.cfg
+++ b/configs/extracted/G335.579-0.272_hmc2.cfg
@@ -4,7 +4,8 @@ ra = 16h30m58.63085s
 dec = -48d43m51.2159s
 frame = icrs
 distance = 3.25 kpc
-vlsr = -46.9 km/s
+# From Paper1
+vlsr = -47.3 km/s
 # Radius from contour
 radius = 0.0367 arcsec
 sourcedata = /Volumes/Pegasus32 R8/dihca/source_data
