--- a/configs/extracted/G335.579-0.272_hmc2.cfg
+++ b/configs/extracted/G335.579-0.272_hmc2.cfg
@@ -5,7 +5,6 @@ dec = -48d43m51.2159s
 frame = icrs
 distance = 3.25 kpc
 vlsr = -46.9 km/s
-# Radius from contour
 radius = 0.0367 arcsec
 sourcedata = /Volumes/Pegasus32 R8/dihca/source_data
 subcubes = /Volumes/Pegasus32 R8/dihca/results/${name}/c5c8/per_hot_core/
@@ -17,6 +16,13 @@ file = ${sourcedata}/continuum/G335.579-0.272.config8.cont_avg.selfcal_0.5_hogbo
 [b6_c5c8_spw0_1000]
 type = spectral_cube
 file = ${subcubes}/spw0_from_CH3OH.structure5.subcube.fits
+rms = 1.8 mJy/beam
+molecules = CH3OH
+chan_width = 488 kHz
+
+[b6_c5c8_spw0_1000_CH3OH_18_3_15_-17_4_14_A_vt_0]
+type = spectral_cube
+file = ../results/G335.579-0.272/c5c8/per_hot_core/line_cubes/hmc2_CH3OH_18_3_15_-17_4_14_A_vt_0_nchans40.fits
 rms = 1.8 mJy/beam
 molecules = CH3OH
 chan_width = 488 kHz
