Update configs after line extraction

--- a/configs/extracted/IRAS_18182-1433_hmc4.cfg
+++ b/configs/extracted/IRAS_18182-1433_hmc4.cfg
@@ -5,7 +5,6 @@ dec = -14d31m47.9397s
 frame = icrs
 distance = 3.6 kpc
 vlsr = 59.0 km/s
-# Radius estimated from contours
 radius = 0.041 arcsec
 sourcedata = /Volumes/Pegasus32 R8/dihca/source_data
 subcubes = /Volumes/Pegasus32 R8/dihca/results/${name}/c5c8/per_hot_core/
@@ -17,6 +16,13 @@ file = ${sourcedata}/continuum/IRAS_18182-1433.config8.cont_avg.selfcal_0.5_hogb
 [b6_c5c8_spw0_1000]
 type = spectral_cube
 file = ${subcubes}/spw0_from_CH3OH.structure5.subcube.fits
+rms = 1.4 mJy/beam
+molecules = CH3OH
+chan_width = 976 kHz
+
+[b6_c5c8_spw0_1000_CH3OH_18_3_15_-17_4_14_A_vt_0]
+type = spectral_cube
+file = ../results/IRAS_18182-1433/c5c8/per_hot_core/line_cubes/hmc4_CH3OH_18_3_15_-17_4_14_A_vt_0_nchans40.fits
 rms = 1.4 mJy/beam
 molecules = CH3OH
 chan_width = 976 kHz
