--- a/configs/extracted/G35.03+0.35_A_hmc1.cfg
+++ b/configs/extracted/G35.03+0.35_A_hmc1.cfg
@@ -4,7 +4,6 @@ ra = 18h54m00.65099s
 dec = +02d01m19.3410s
 frame = icrs
 distance = 3.2 kpc
-#vlsr = 48.0 km/s
 vlsr = 45.94 km/s
 radius = 0.024 arcsec
 sourcedata = /Volumes/Pegasus32 R8/dihca/source_data
@@ -17,6 +16,13 @@ file = ${sourcedata}/continuum/G35.03+0.35_A.config8.cont_avg.selfcal_0.5_hogbom
 [b6_c5c8_spw0_1000]
 type = spectral_cube
 file = ${subcubes}/spw0_from_CH3OH.structure2.subcube.fits
+rms = 1.6 mJy/beam
+molecules = CH3OH
+chan_width = 488 kHz
+
+[b6_c5c8_spw0_1000_CH3OH_18_3_15_-17_4_14_A_vt_0]
+type = spectral_cube
+file = ../results/G35.03+0.35_A/c5c8/per_hot_core/line_cubes/hmc1_CH3OH_18_3_15_-17_4_14_A_vt_0_nchans40.fits
 rms = 1.6 mJy/beam
 molecules = CH3OH
 chan_width = 488 kHz
