--- a/configs/extracted/G351.77-0.54_hmc1.cfg
+++ b/configs/extracted/G351.77-0.54_hmc1.cfg
@@ -5,7 +5,6 @@ dec = -36d09m17.376s
 frame = icrs
 distance = 2.2 kpc
 vlsr = -3.6 km/s
-# Radius estimated from contours
 radius = 0.035 arcsec
 sourcedata = /Volumes/Pegasus32 R8/dihca/source_data
 subcubes = /Volumes/Pegasus32 R8/dihca/results/${name}/c5c8/per_hot_core/
@@ -17,6 +16,13 @@ file = ${sourcedata}/continuum/G351.77-0.54.config8.cont_avg.selfcal_0.5_hogbom.
 [b6_c5c8_spw0_1000]
 type = spectral_cube
 file = ${subcubes}/spw0_from_CH3OH.structure4.subcube.fits
+rms = 2.1 mJy/beam
+molecules = CH3OH
+chan_width = 488 kHz
+
+[b6_c5c8_spw0_1000_CH3OH_18_3_15_-17_4_14_A_vt_0]
+type = spectral_cube
+file = ../results/G351.77-0.54/c5c8/per_hot_core/line_cubes/hmc1_CH3OH_18_3_15_-17_4_14_A_vt_0_nchans40.fits
 rms = 2.1 mJy/beam
 molecules = CH3OH
 chan_width = 488 kHz
