--- a/configs/extracted/NGC_6334_I_N_hmc4.cfg
+++ b/configs/extracted/NGC_6334_I_N_hmc4.cfg
@@ -5,7 +5,6 @@ dec = -35d45m06.4298713643s
 frame = icrs
 distance = 1.7 kpc
 vlsr = -5.0 km/s
-# Radius estimated from contours
 radius = 0.040 arcsec
 sourcedata = /Volumes/Pegasus32 R8/dihca/source_data
 subcubes = /Volumes/Pegasus32 R8/dihca/results/${name}/c5c8/per_hot_core/
@@ -17,6 +16,13 @@ file = ${sourcedata}/continuum/NGC_6334_I_N.config8.cont_avg.selfcal_0.5_hogbom.
 [b6_c5c8_spw0_1000]
 type = spectral_cube
 file = ${subcubes}/spw0_from_CH3OH.structure7.subcube.fits
+rms = 1.6 mJy/beam
+molecules = CH3OH
+chan_width = 488 kHz
+
+[b6_c5c8_spw0_1000_CH3OH_18_3_15_-17_4_14_A_vt_0]
+type = spectral_cube
+file = ../results/NGC_6334_I_N/c5c8/per_hot_core/line_cubes/hmc4_CH3OH_18_3_15_-17_4_14_A_vt_0_nchans40.fits
 rms = 1.6 mJy/beam
 molecules = CH3OH
 chan_width = 488 kHz
