--- a/configs/extracted/G35.20-0.74_N_hmc1.cfg
+++ b/configs/extracted/G35.20-0.74_N_hmc1.cfg
@@ -4,7 +4,8 @@ ra = 18h58m12.95261s
 dec = +01d40m37.3652s
 frame = icrs
 distance = 2.2 kpc
-vlsr = 35.9 km/s
+#vlsr = 35.9 km/s
+vlsr = 31 km/s
 radius = 0.050 arcsec
 sourcedata = /Volumes/Pegasus32 R8/dihca/source_data
 subcubes = /Volumes/Pegasus32 R8/dihca/results/${name}/c5c8/per_hot_core/
@@ -16,13 +17,6 @@ file = ${sourcedata}/continuum/G35.20-0.74_N.config8.cont_avg.selfcal_0.5_hogbom
 [b6_c5c8_spw0_1000]
 type = spectral_cube
 file = ${subcubes}/spw0_from_CH3OH.structure32.subcube.fits
-rms = 1.7 mJy/beam
-molecules = CH3OH
-chan_width = 488 kHz
-
-[b6_c5c8_spw0_1000_CH3OH_18_3_15_-17_4_14_A_vt_0]
-type = spectral_cube
-file = ../results/G35.20-0.74_N/c5c8/per_hot_core/line_cubes/hmc1_CH3OH_18_3_15_-17_4_14_A_vt_0_nchans40.fits
 rms = 1.7 mJy/beam
 molecules = CH3OH
 chan_width = 488 kHz
