--- a/configs/extracted/G29.96-0.02_hmc2.cfg
+++ b/configs/extracted/G29.96-0.02_hmc2.cfg
@@ -5,7 +5,6 @@ dec = -02d39m22.4352813166s
 frame = icrs
 distance = 3.5 kpc
 vlsr = 98.0 km/s
-# From contour
 radius = 0.06 arcsec
 sourcedata = /Volumes/Pegasus32 R8/dihca/source_data
 subcubes = /Volumes/Pegasus32 R8/dihca/results/${name}/c5c8/per_hot_core/
@@ -17,6 +16,13 @@ file = ${sourcedata}/continuum/G29.96-0.02.config8.cont_avg.selfcal_0.5_hogbom.i
 [b6_c5c8_spw0_1000]
 type = spectral_cube
 file = ${subcubes}/spw0_from_CH3OH.structure1.subcube.fits
+rms = 1.7 mJy/beam
+molecules = CH3OH
+chan_width = 488 kHz
+
+[b6_c5c8_spw0_1000_CH3OH_18_3_15_-17_4_14_A_vt_0]
+type = spectral_cube
+file = ../results/G29.96-0.02/c5c8/per_hot_core/line_cubes/hmc2_CH3OH_18_3_15_-17_4_14_A_vt_0_nchans40.fits
 rms = 1.7 mJy/beam
 molecules = CH3OH
 chan_width = 488 kHz
