Work with CH3CN

--- a/configs/G333.23-0.06.cfg
+++ b/configs/G333.23-0.06.cfg
@@ -259,3 +259,8 @@ file = ${cubesdir}/c5c8_CH3OH/G333.23-0.06_spw0_0-1000.image.fits
 rms = 1.7 mJy/beam
 molecules = CH3OH
 
+[b6_c5c8_spw3]
+type = spectral_cube
+file = ${cubesdir}/c5c8_spw3/G333.23-0.06_spw3.image.fits
+rms = 1.6 mJy/beam
+molecules = CH3CN
