--- a/configs/G14.22-0.50_S.cfg
+++ b/configs/G14.22-0.50_S.cfg
@@ -107,3 +107,8 @@ file = ${cubesdir}/c5c8_CH3OH/G14.22-0.50_S_spw0_0-1000.image.fits
 rms = 1.5 mJy/beam
 molecules = CH3OH
 
+[b6_c5c8_spw3]
+type = spectral_cube
+file = ${cubesdir}/c5c8_spw3/G14.22-0.50_S_spw3.image.fits
+rms = 1.6 mJy/beam
+molecules = CH3CN
