--- a/configs/G333.46-0.16.cfg
+++ b/configs/G333.46-0.16.cfg
@@ -195,3 +195,8 @@ file = ${cubesdir}/c5c8_CH3OH/G333.46-0.16_spw0_0-1000.image.fits
 rms = 2.0 mJy/beam
 molecules = CH3OH
 
+[b6_c5c8_spw3]
+type = spectral_cube
+file = ${cubesdir}/c5c8_spw3/G333.46-0.16_spw3.image.fits
+rms = 2.0 mJy/beam
+molecules = CH3CN
