--- a/configs/G35.03+0.35_A.cfg
+++ b/configs/G35.03+0.35_A.cfg
@@ -170,3 +170,8 @@ file = ${cubesdir}/c5c8_CH3OH/G35.03+0.35_A_spw0_0-1000.image.fits
 rms = 1.6 mJy/beam
 molecules = CH3OH
 
+[b6_c5c8_spw3]
+type = spectral_cube
+file = ${cubesdir}/c5c8_spw3/G35.03+0.35_A_spw3.image.fits
+rms = 1.9 mJy/beam
+molecules = CH3CN
