--- a/configs/IRAS_165623959.cfg
+++ b/configs/IRAS_165623959.cfg
@@ -219,3 +219,8 @@ file = ${cubesdir}/c5c8_CH3OH/IRAS_165623959_spw0_0-1000.image.fits
 rms = 1.7 mJy/beam
 molecules = CH3OH
 
+[b6_c5c8_spw3]
+type = spectral_cube
+file = ${cubesdir}/c5c8_spw3/IRAS_165623959_spw3.image.fits
+rms = 1.5 mJy/beam
+molecules = CH3CN
