--- a/configs/IRAS_180891732.cfg
+++ b/configs/IRAS_180891732.cfg
@@ -177,10 +177,10 @@ molecules = CH3OH
 #file = ${basedir}/yclean_concat/IRAS_180891732_spw3_1/autoIRAS_180891732_spw0_1.tc_final.image.fits
 ##rms = 1.7 mJy/beam
 #molecules = C(18)O
-#
-#[b6_c5c8_spw3_2]
-#type = spectral_cube
-#file = ${basedir}/yclean_concat/IRAS_180891732_spw3_2/autoIRAS_180891732_spw0_2.tc_final.image.fits
-##rms = 1.7 mJy/beam
-#molecules = CH3CN HC3N
+
+[b6_c5c8_spw3_2]
+type = spectral_cube
+file = ${cubesdir}/c5c8_spw3/IRAS_180891732_spw3_2.image.fits
+rms = 1.7 mJy/beam
+molecules = CH3CN HC3N
 
