--- a/configs/extracted/G11.92-0.61_hmc1.cfg
+++ b/configs/extracted/G11.92-0.61_hmc1.cfg
@@ -21,6 +21,13 @@ rms = 1.2 mJy/beam
 molecules = CH3OH
 chan_width = 976 kHz
 
+[b6_c5c8_spw3]
+type = spectral_cube
+file = ${subcubes}/spw3_from_CH3CN.structure185.subcube.fits
+rms = 1.2 mJy/beam
+molecules = CH3CN
+chan_width = 488 kHz
+
 [b6_c5c8_spw0_1000_CH3OH_18_3_15_-17_4_14_A_vt_0]
 type = spectral_cube
 file = ../results/G11.92-0.61/c5c8/per_hot_core/line_cubes/hmc1_CH3OH_18_3_15_-17_4_14_A_vt_0_nchans40.fits
