--- a/configs/extracted/G333.46-0.16_hmc3.cfg
+++ b/configs/extracted/G333.46-0.16_hmc3.cfg
@@ -20,6 +20,13 @@ rms = 2.0 mJy/beam
 molecules = CH3OH
 chan_width = 488 kHz
 
+[b6_c5c8_spw3]
+type = spectral_cube
+file = ${subcubes}/spw3_from_CH3CN.structure99.subcube.fits
+rms = 2.0 mJy/beam
+molecules = CH3CN
+chan_width = 488 kHz
+
 [b6_c5c8_spw0_1000_CH3OH_18_3_15_-17_4_14_A_vt_0]
 type = spectral_cube
 file = ../results/G333.46-0.16/c5c8/per_hot_core/line_cubes/hmc3_CH3OH_18_3_15_-17_4_14_A_vt_0_nchans40.fits
