--- a/configs/G11.1-0.12.cfg
+++ b/configs/G11.1-0.12.cfg
@@ -59,3 +59,8 @@ file = ${cubesdir}/c5c8_CH3OH/G11.1-0.12_spw0_0-1000.image.fits
 rms = 1.2 mJy/beam
 molecules = CH3OH
 
+[b6_c5c8_spw3]
+type = spectral_cube
+file = ${cubesdir}/c5c8_spw3/G11.1-0.12_spw3.image.fits
+rms = 1.2 mJy/beam
+molecules = CH3CN
