--- a/configs/extracted/G11.92-0.61_hmc1.cfg
+++ b/configs/extracted/G11.92-0.61_hmc1.cfg
@@ -4,7 +4,6 @@ ra = 18h13m58.11097s
 dec = -18d54m20.2010s
 frame = icrs
 distance = 3.37 kpc
-# From CH3OH 0.05'' at ra,dec
 vlsr = 34.8 km/s
 radius = 0.0534 arcsec
 sourcedata = /Volumes/Pegasus32 R8/dihca/source_data
@@ -34,4 +33,32 @@ file = ../results/G11.92-0.61/c5c8/per_hot_core/line_cubes/hmc1_CH3OH_18_3_15_-1
 rms = 1.2 mJy/beam
 molecules = CH3OH
 chan_width = 976 kHz
+
+[b6_c5c8_spw3_CH3CN_12_2_-11_2_]
+type = spectral_cube
+file = ../results/G11.92-0.61/c5c8/per_hot_core/line_cubes/hmc1_CH3CN_12_2_-11_2__nchans40.fits
+rms = 1.2 mJy/beam
+molecules = CH3CN
+chan_width = 488 kHz
+
+[b6_c5c8_spw3_CH3CN_12_3_-11_3_]
+type = spectral_cube
+file = ../results/G11.92-0.61/c5c8/per_hot_core/line_cubes/hmc1_CH3CN_12_3_-11_3__nchans40.fits
+rms = 1.2 mJy/beam
+molecules = CH3CN
+chan_width = 488 kHz
+
+[b6_c5c8_spw3_CH3CN_12_4_-11_4_]
+type = spectral_cube
+file = ../results/G11.92-0.61/c5c8/per_hot_core/line_cubes/hmc1_CH3CN_12_4_-11_4__nchans40.fits
+rms = 1.2 mJy/beam
+molecules = CH3CN
+chan_width = 488 kHz
+
+[b6_c5c8_spw3_CH3CN_12_8_-11_8_]
+type = spectral_cube
+file = ../results/G11.92-0.61/c5c8/per_hot_core/line_cubes/hmc1_CH3CN_12_8_-11_8__nchans40.fits
+rms = 1.2 mJy/beam
+molecules = CH3CN
+chan_width = 488 kHz
 
