--- a/configs/extracted/IRAS_165623959_hmc2.cfg
+++ b/configs/extracted/IRAS_165623959_hmc2.cfg
@@ -1,12 +1,11 @@
 [INFO]
 name = IRAS_165623959
-ra = 16h59m41.62564s
-dec = -40d03m43.6385s
+ra = 16h59m41.08769s
+dec = -40d03m39.0848s
 frame = icrs
 distance = 1.7 kpc
 vlsr = -14.0 km/s
-# Measured from contours
-radius = 0.03 arcsec
+radius = 0.044 arcsec
 sourcedata = /Volumes/Pegasus32 R8/dihca/source_data
 subcubes = /Volumes/Pegasus32 R8/dihca/results/${name}/c5c8/per_hot_core/
 
@@ -14,9 +13,16 @@ subcubes = /Volumes/Pegasus32 R8/dihca/results/${name}/c5c8/per_hot_core/
 type = fits_file
 file = ${sourcedata}/continuum/IRAS_165623959.config8.cont_avg.selfcal_0.5_hogbom.image.fits
 
+[b6_c5c8_spw0_1000]
+type = spectral_cube
+file = ${subcubes}/spw0_from_CH3OH.structure8.subcube.fits
+rms = 1.7 mJy/beam
+molecules = CH3OH
+chan_width = 488 kHz
+
 [b6_c5c8_spw3]
 type = spectral_cube
-file = ${subcubes}/spw3_from_CH3OH.structure1090.subcube.fits
+file = ${subcubes}/spw3_from_CH3OH.structure1458.subcube.fits
 rms = 1.5 mJy/beam
 molecules = CH3CN
 chan_width = 488 kHz
