--- a/configs/extracted/IRAS_165623959_hmc1.cfg
+++ b/configs/extracted/IRAS_165623959_hmc1.cfg
@@ -5,7 +5,6 @@ dec = -40d03m43.6385s
 frame = icrs
 distance = 1.7 kpc
 vlsr = -14.0 km/s
-# Measured from contours
 radius = 0.03 arcsec
 sourcedata = /Volumes/Pegasus32 R8/dihca/source_data
 subcubes = /Volumes/Pegasus32 R8/dihca/results/${name}/c5c8/per_hot_core/
@@ -16,7 +15,35 @@ file = ${sourcedata}/continuum/IRAS_165623959.config8.cont_avg.selfcal_0.5_hogbo
 
 [b6_c5c8_spw3]
 type = spectral_cube
-file = ${subcubes}/spw3_from_CH3OH.structure1090.subcube.fits
+file = ${subcubes}/spw3_from_CH3CN.structure1090.subcube.fits
+rms = 1.5 mJy/beam
+molecules = CH3CN
+chan_width = 488 kHz
+
+[b6_c5c8_spw3_CH3CN_12_2_-11_2_]
+type = spectral_cube
+file = ../results/IRAS_165623959/c5c8/per_hot_core/line_cubes/hmc1_CH3CN_12_2_-11_2__nchans40.fits
+rms = 1.5 mJy/beam
+molecules = CH3CN
+chan_width = 488 kHz
+
+[b6_c5c8_spw3_CH3CN_12_3_-11_3_]
+type = spectral_cube
+file = ../results/IRAS_165623959/c5c8/per_hot_core/line_cubes/hmc1_CH3CN_12_3_-11_3__nchans40.fits
+rms = 1.5 mJy/beam
+molecules = CH3CN
+chan_width = 488 kHz
+
+[b6_c5c8_spw3_CH3CN_12_4_-11_4_]
+type = spectral_cube
+file = ../results/IRAS_165623959/c5c8/per_hot_core/line_cubes/hmc1_CH3CN_12_4_-11_4__nchans40.fits
+rms = 1.5 mJy/beam
+molecules = CH3CN
+chan_width = 488 kHz
+
+[b6_c5c8_spw3_CH3CN_12_8_-11_8_]
+type = spectral_cube
+file = ../results/IRAS_165623959/c5c8/per_hot_core/line_cubes/hmc1_CH3CN_12_8_-11_8__nchans40.fits
 rms = 1.5 mJy/beam
 molecules = CH3CN
 chan_width = 488 kHz
