--- a/configs/IRAS_18337-0743.cfg
+++ b/configs/IRAS_18337-0743.cfg
@@ -115,3 +115,8 @@ file = ${cubesdir}/c5c8_CH3OH/IRAS_18337-0743_spw0_0-1000.image.fits
 rms = 2.3 mJy/beam
 molecules = CH3OH
 
+[b6_c5c8_spw3]
+type = spectral_cube
+file = ${cubesdir}/c5c8_spw3/IRAS_18337-0743_spw3.image.fits
+rms = 2.2 mJy/beam
+molecules = CH3CN
