--- a/configs/extracted/G351.77-0.54_hmc1.cfg
+++ b/configs/extracted/G351.77-0.54_hmc1.cfg
@@ -1,7 +1,9 @@
 [INFO]
 name = G351.77-0.54
-ra = 17h26m42.531s
-dec = -36d09m17.376s
+#ra = 17h26m42.531s
+#dec = -36d09m17.376s
+ra = 17h26m42.53329s
+dec = -36d09m17.3878s
 frame = icrs
 distance = 2.2 kpc
 vlsr = -3.6 km/s
