--- a/configs/extracted/IRAS_18182-1433_hmc4.cfg
+++ b/configs/extracted/IRAS_18182-1433_hmc4.cfg
@@ -1,7 +1,9 @@
 [INFO]
 name = IRAS_18182-1433
-ra = 18h21m09.01686s
-dec = -14d31m47.9397s
+#ra = 18h21m09.01686s
+#dec = -14d31m47.9397s
+ra = 18h21m09.01613s
+dec = -14d31m47.9401s
 frame = icrs
 distance = 3.6 kpc
 vlsr = 59.0 km/s
