--- a/configs/extracted/NGC_6334_I_N_hmc1.cfg
+++ b/configs/extracted/NGC_6334_I_N_hmc1.cfg
@@ -1,7 +1,9 @@
 [INFO]
 name = NGC_6334_I_N
-ra = 17h20m54.59259s
-dec = -35d45m17.3664586427s
+#ra = 17h20m54.59259s
+#dec = -35d45m17.3664586427s
+ra = 17h20m54.59280s
+dec = -35d45m17.3686s
 frame = icrs
 distance = 1.7 kpc
 vlsr = -5.0 km/s
