--- a/configs/extracted/NGC_6334_I_N_hmc2.cfg
+++ b/configs/extracted/NGC_6334_I_N_hmc2.cfg
@@ -1,7 +1,9 @@
 [INFO]
 name = NGC_6334_I_N
-ra = 17h20m55.19122s
-dec = -35d45m03.9506457765s
+#ra = 17h20m55.19122s
+#dec = -35d45m03.9506457765s
+ra = 17h20m55.19138s
+dec = -35d45m03.9525s
 frame = icrs
 distance = 1.7 kpc
 vlsr = -5.0 km/s
