--- a/configs/extracted/NGC_6334_I_N_hmc4.cfg
+++ b/configs/extracted/NGC_6334_I_N_hmc4.cfg
@@ -1,7 +1,9 @@
 [INFO]
 name = NGC_6334_I_N
-ra = 17h20m54.87219s
-dec = -35d45m06.4298713643s
+#ra = 17h20m54.87219s
+#dec = -35d45m06.4298713643s
+ra = 17h20m54.87122s
+dec = -35d45m06.4309s
 frame = icrs
 distance = 1.7 kpc
 vlsr = -5.0 km/s
