--- a/configs/extracted/NGC_6334_I_N_hmc5.cfg
+++ b/configs/extracted/NGC_6334_I_N_hmc5.cfg
@@ -1,7 +1,10 @@
 [INFO]
 name = NGC_6334_I_N
-ra = 17h20m54.83885s
-dec = -35d45m06.0538803313s
+#ra = 17h20m54.83885s
+#dec = -35d45m06.0538803313s
+ra = 17h20m54.83871s
+dec = -35d45m06.0527s
+#PA = 10
 frame = icrs
 distance = 1.7 kpc
 vlsr = -5.0 km/s
