--- a/configs/extracted/pvmaps/G29.96-0.02_hmc2_rotation.cfg
+++ b/configs/extracted/pvmaps/G29.96-0.02_hmc2_rotation.cfg
@@ -1,6 +1,6 @@
 [DEFAULT]
 moldir = /Volumes/Pegasus32 R8/dihca/scripts/molecules
-pas = 60 150 deg
+pas = 5 40 60 95 130 150 deg
 
 [CH3OH_spw0]
 molecule = CH3OH
