--- a/configs/extracted/pvmaps/G335.579-0.272_hmc1_rotation.cfg
+++ b/configs/extracted/pvmaps/G335.579-0.272_hmc1_rotation.cfg
@@ -1,6 +1,6 @@
 [DEFAULT]
 moldir = /Volumes/Pegasus32 R8/dihca/scripts/molecules
-pas = 0 90 deg
+pas = 0 30 90 120 deg
 
 [CH3OH_spw0]
 molecule = CH3OH
