--- a/configs/extracted/pvmaps/G335.579-0.272_hmc2_rotation.cfg
+++ b/configs/extracted/pvmaps/G335.579-0.272_hmc2_rotation.cfg
@@ -1,6 +1,6 @@
 [DEFAULT]
 moldir = /Volumes/Pegasus32 R8/dihca/scripts/molecules
-pas = 18 108 deg
+pas = 198 202 288 292 deg
 
 [CH3OH_spw0]
 molecule = CH3OH
