--- a/configs/extracted/pvmaps/IRAS_18182-1433_hmc3_rotation.cfg
+++ b/configs/extracted/pvmaps/IRAS_18182-1433_hmc3_rotation.cfg
@@ -1,6 +1,6 @@
 [DEFAULT]
 moldir = /Volumes/Pegasus32 R8/dihca/scripts/molecules
-pas = 9 99 deg
+pas = 10 25 40 100 115 130 deg
 
 [CH3OH_spw0]
 molecule = CH3OH
