--- a/configs/extracted/pvmaps/NGC_6334_I_N_hmc2_rotation.cfg
+++ b/configs/extracted/pvmaps/NGC_6334_I_N_hmc2_rotation.cfg
@@ -1,6 +1,6 @@
 [DEFAULT]
 moldir = /Volumes/Pegasus32 R8/dihca/scripts/molecules
-pas = 39 129 deg
+pas = 0 20 40 90 110 130 deg
 
 [CH3OH_spw0]
 molecule = CH3OH
