--- a/configs/extracted/pvmaps/W33A_hmc1_rotation.cfg
+++ b/configs/extracted/pvmaps/W33A_hmc1_rotation.cfg
@@ -1,6 +1,6 @@
 [DEFAULT]
 moldir = /Volumes/Pegasus32 R8/dihca/scripts/molecules
-pas = 29 119 deg
+pas = 30 35 120 125 deg
 
 [CH3OH_spw0]
 molecule = CH3OH
