--- a/configs/extracted/G336.01-0.82_hmc1.cfg
+++ b/configs/extracted/G336.01-0.82_hmc1.cfg
@@ -1,7 +1,9 @@
 [INFO]
 name = G336.01-0.82
-ra = 16h35m09.261s
-dec = -48d46m47.66s
+#ra = 16h35m09.261s
+#dec = -48d46m47.66s
+ra = 16h35m09.25854s
+dec = -48d46m47.6623s
 frame = icrs
 distance = 3.1 kpc
 vlsr = -47.2 km/s
