--- a/configs/extracted/NGC_6334_I_N_hmc3.cfg
+++ b/configs/extracted/NGC_6334_I_N_hmc3.cfg
@@ -1,7 +1,9 @@
 [INFO]
 name = NGC_6334_I_N
-ra = 17h20m54.61936s
-dec = -35d45m08.6730547234s
+#ra = 17h20m54.61936s
+#dec = -35d45m08.6730547234s
+ra = 17h20m54.61962s
+dec = -35d45m08.6715s
 frame = icrs
 distance = 1.7 kpc
 vlsr = -5.0 km/s
