--- a/configs/extracted/pvmaps/G10.62-0.38_hmc1_rotation.cfg
+++ b/configs/extracted/pvmaps/G10.62-0.38_hmc1_rotation.cfg
@@ -1,6 +1,6 @@
 [DEFAULT]
 moldir = /Volumes/Pegasus32 R8/dihca/scripts/molecules
-pas = 40 130 deg
+pas = 40 80 100 130 170 190 deg
 
 [CH3OH_spw0]
 molecule = CH3OH
