--- a/configs/extracted/pvmaps/G11.1-0.12_hmc1_rotation.cfg
+++ b/configs/extracted/pvmaps/G11.1-0.12_hmc1_rotation.cfg
@@ -1,16 +1,6 @@
 [DEFAULT]
 moldir = /Volumes/Pegasus32 R8/dihca/scripts/molecules
-pas = 40 60 130 150 deg
-
-[CH3OH_spw0]
-molecule = CH3OH
-qns = 18(3,15)-17(4,14)A,vt=0
-line_lists = CDMS
-restore_molecule = ${moldir}/ch3oh.json
-source_section = b6_c5c8_spw0_1000
-length = 1 arcsec
-width = 0.05 arcsec
-freq_slab = 28 MHz
+pas = 25 115 deg
 
 [CH3CN_K2]
 molecule = CH3CN
