--- a/configs/extracted/pvmaps/G335.78+0.17_hmc2_rotation.cfg
+++ b/configs/extracted/pvmaps/G335.78+0.17_hmc2_rotation.cfg
@@ -1,6 +1,6 @@
 [DEFAULT]
 moldir = /Volumes/Pegasus32 R8/dihca/scripts/molecules
-pas = 64 154 deg
+pas = 65 85 155 175 deg
 
 [CH3OH_spw0]
 molecule = CH3OH
