--- a/configs/extracted/pvmaps/G35.13-0.74_hmc1_rotation.cfg
+++ b/configs/extracted/pvmaps/G35.13-0.74_hmc1_rotation.cfg
@@ -1,6 +1,6 @@
 [DEFAULT]
 moldir = /Volumes/Pegasus32 R8/dihca/scripts/molecules
-pas = 45 135 deg
+pas = 30 45 120 135 deg
 
 [CH3OH_spw0]
 molecule = CH3OH
