--- a/configs/extracted/pvmaps/G35.13-0.74_hmc2_rotation.cfg
+++ b/configs/extracted/pvmaps/G35.13-0.74_hmc2_rotation.cfg
@@ -1,6 +1,6 @@
 [DEFAULT]
 moldir = /Volumes/Pegasus32 R8/dihca/scripts/molecules
-pas = 75 165 deg
+pas = 5 75 95 165 deg
 
 [CH3OH_spw0]
 molecule = CH3OH
