--- a/configs/extracted/pvmaps/G35.13-0.74_hmc3_rotation.cfg
+++ b/configs/extracted/pvmaps/G35.13-0.74_hmc3_rotation.cfg
@@ -1,6 +1,6 @@
 [DEFAULT]
 moldir = /Volumes/Pegasus32 R8/dihca/scripts/molecules
-pas = 3 93 deg
+pas = 5 35 65 95 125 155 deg
 
 [CH3OH_spw0]
 molecule = CH3OH
