--- a/configs/extracted/pvmaps/G351.77-0.54_hmc1_rotation.cfg
+++ b/configs/extracted/pvmaps/G351.77-0.54_hmc1_rotation.cfg
@@ -1,6 +1,6 @@
 [DEFAULT]
 moldir = /Volumes/Pegasus32 R8/dihca/scripts/molecules
-pas = 55 145 deg
+pas = 40 55 130 145 deg
 
 [CH3OH_spw0]
 molecule = CH3OH
