--- a/configs/extracted/pvmaps/IRAS_180891732_hmc2_rotation.cfg
+++ b/configs/extracted/pvmaps/IRAS_180891732_hmc2_rotation.cfg
@@ -1,6 +1,6 @@
 [DEFAULT]
 moldir = /Volumes/Pegasus32 R8/dihca/scripts/molecules
-pas = 45 135 deg
+pas = 40 45 130 135 deg
 
 [CH3OH_spw0]
 molecule = CH3OH
@@ -8,6 +8,26 @@ qns = 18(3,15)-17(4,14)A,vt=0
 line_lists = CDMS
 restore_molecule = ${moldir}/ch3oh.json
 source_section = b6_c5c8_spw0_1000
+length = 1 arcsec
+width = 0.05 arcsec
+freq_slab = 28 MHz
+
+[CH3CN_K2]
+molecule = CH3CN
+qns = 12(2)-11(2)
+line_lists = CDMS
+restore_molecule = ${moldir}/ch3cn.json
+source_section = b6_c5c8_spw3
+length = 1 arcsec
+width = 0.05 arcsec
+freq_slab = 28 MHz
+
+[CH3CN_K3]
+molecule = CH3CN
+qns = 12(3)-11(3)
+line_lists = CDMS
+restore_molecule = ${moldir}/ch3cn.json
+source_section = b6_c5c8_spw3
 length = 1 arcsec
 width = 0.05 arcsec
 freq_slab = 28 MHz
