--- a/configs/extracted/pvmaps/NGC_6334_I_N_hmc1_rotation.cfg
+++ b/configs/extracted/pvmaps/NGC_6334_I_N_hmc1_rotation.cfg
@@ -1,6 +1,6 @@
 [DEFAULT]
 moldir = /Volumes/Pegasus32 R8/dihca/scripts/molecules
-pas = 37 127 deg
+pas = 10 20 35 100 110 125 deg
 
 [CH3OH_spw0]
 molecule = CH3OH
