--- a/configs/extracted/pvmaps/NGC_6334_I_N_hmc3_rotation.cfg
+++ b/configs/extracted/pvmaps/NGC_6334_I_N_hmc3_rotation.cfg
@@ -1,6 +1,6 @@
 [DEFAULT]
 moldir = /Volumes/Pegasus32 R8/dihca/scripts/molecules
-pas = 38 128 deg
+pas = 10 40 55 100 130 145 deg
 
 [CH3OH_spw0]
 molecule = CH3OH
