Update source distances and vlsr

--- a/configs/G10.62-0.38.cfg
+++ b/configs/G10.62-0.38.cfg
@@ -6,8 +6,12 @@ frame = icrs
 basedir = /home/myso/share/binary_project/IRAS_18089/G10.62-0.38
 sourcedata = /Volumes/Pegasus32 R8/dihca/source_data
 cubesdir = /Volumes/Pegasus32 R8/dihca/source_data/clean_cubes/
-distance = 3.5 kpc
-vlsr = -2.0 km/s
+#distance = 3.5 kpc
+#vlsr = -2.0 km/s
+# Parallax 2014ApJ...781..108S
+distance = 4.95 kpc
+# Paper III
+vlsr = 0.851 km/s
 
 [ALMA1]
 name = ALMA1
