--- a/configs/G11.1-0.12.cfg
+++ b/configs/G11.1-0.12.cfg
@@ -6,8 +6,10 @@ frame = icrs
 basedir = /home/myso/share/binary_project/IRAS_18089/G11.1-0.12
 sourcedata = /Volumes/Pegasus32 R8/dihca/source_data
 cubesdir = /Volumes/Pegasus32 R8/dihca/source_data/clean_cubes/
-distance = 3.5 kpc
-vlsr = 30.0 km/s
+# ATLASGAL
+distance = 3.0 kpc
+# Paper III
+vlsr = 31.85 km/s
 
 [ALMA1]
 name = ALMA1
