--- a/configs/G11.92-0.61.cfg
+++ b/configs/G11.92-0.61.cfg
@@ -6,8 +6,10 @@ frame = icrs
 basedir = /home/myso/share/binary_project/IRAS_18089/G11.92-0.61
 sourcedata = /Volumes/Pegasus32 R8/dihca/source_data
 cubesdir = /Volumes/Pegasus32 R8/dihca/source_data/clean_cubes/
-distance = 3.4 kpc
-vlsr = 35.0 km/s
+# Parallax
+distance = 3.37 kpc
+# Paper III
+vlsr = 35.1 km/s
 
 [ALMA1]
 name = ALMA1
