--- a/configs/G29.96-0.02.cfg
+++ b/configs/G29.96-0.02.cfg
@@ -6,8 +6,9 @@ frame = icrs
 basedir = /data/share/binary_project/G34.43/G29.96-0.02
 sourcedata = /Volumes/Pegasus32 R8/dihca/source_data
 cubesdir = /Volumes/Pegasus32 R8/dihca/source_data/clean_cubes/
-distance = 3.5 kpc
-vlsr = 98.0 km/s
+distance = 5.26 kpc
+# Paper III
+vlsr = 97.25 km/s
 
 [ALMA1]
 name = ALMA1
