--- a/configs/extracted/G10.62-0.38_hmc1.cfg
+++ b/configs/extracted/G10.62-0.38_hmc1.cfg
@@ -3,8 +3,10 @@ name = G10.62-0.38
 ra = 18h10m28.60755s
 dec = -19d55m49.4614s
 frame = icrs
-distance = 3.5 kpc
-vlsr = -2.0 km/s
+# Parallax 2014ApJ...781..108S
+distance = 4.95 kpc
+# Paper III
+vlsr = 0.851 km/s
 radius = 0.0458 arcsec
 sourcedata = /Volumes/Pegasus32 R8/dihca/source_data
 subcubes = /Volumes/Pegasus32 R8/dihca/results/${name}/c5c8/per_hot_core/
