--- a/configs/extracted/G11.1-0.12_hmc1.cfg
+++ b/configs/extracted/G11.1-0.12_hmc1.cfg
@@ -3,8 +3,10 @@ name = G11.1-0.12
 ra = 18h10m28.24854s
 dec = -19d22m30.3222s
 frame = icrs
-distance = 3.5 kpc
-vlsr = 30.0 km/s
+# ATLASGAL
+distance = 3.0 kpc
+# Paper III
+vlsr = 31.85 km/s
 radius = 0.038 arcsec
 sourcedata = /Volumes/Pegasus32 R8/dihca/source_data
 cubesdir = /Volumes/Pegasus32 R8/dihca/results/${name}/c5c8/per_hot_core/
