--- a/configs/extracted/G29.96-0.02_hmc1.cfg
+++ b/configs/extracted/G29.96-0.02_hmc1.cfg
@@ -3,8 +3,9 @@ name = G29.96-0.02
 ra = 18h46m03.77860s
 dec = -02d39m22.3746s
 frame = icrs
-distance = 3.5 kpc
-vlsr = 98.0 km/s
+distance = 5.26 kpc
+# Paper III
+vlsr = 97.25 km/s
 radius = 0.067 arcsec
 sourcedata = /Volumes/Pegasus32 R8/dihca/source_data
 subcubes = /Volumes/Pegasus32 R8/dihca/results/${name}/c5c8/per_hot_core/
