--- a/configs/extracted/G333.23-0.06_hmc1.cfg
+++ b/configs/extracted/G333.23-0.06_hmc1.cfg
@@ -3,8 +3,9 @@ name = G333.23-0.06
 ra = 16h19m51.27585s
 dec = -50d15m14.5305s
 frame = icrs
-distance = 3.7 kpc
-vlsr = -87.04 km/s
+distance = 5.2 kpc
+# Paper III
+vlsr = -84.96 km/s
 radius = 0.083 arcsec
 sourcedata = /Volumes/Pegasus32 R8/dihca/source_data
 subcubes = /Volumes/Pegasus32 R8/dihca/results/${name}/c5c8/per_hot_core/
