--- a/configs/extracted/G333.23-0.06_hmc2.cfg
+++ b/configs/extracted/G333.23-0.06_hmc2.cfg
@@ -3,7 +3,8 @@ name = G333.23-0.06
 ra = 16h19m50.88363s
 dec = -50d15m10.5272s
 frame = icrs
-distance = 3.7 kpc
+distance = 5.2 kpc
+# Paper III
 vlsr = -87.04 km/s
 radius = 0.043 arcsec
 sourcedata = /Volumes/Pegasus32 R8/dihca/source_data
