--- a/configs/extracted/G333.46-0.16_hmc2.cfg
+++ b/configs/extracted/G333.46-0.16_hmc2.cfg
@@ -3,8 +3,11 @@ name = G333.46-0.16
 ra = 16h21m20.17290s
 dec = -50d09m48.8762s
 frame = icrs
-distance = 2.4 kpc
-vlsr = -42.5 km/s
+distance = 2.9 kpc
+# Paper III
+#vlsr = -39.23 km/s
+# Re-centered
+vlsr = -43.2 km/s
 radius = 0.0415 arcsec
 sourcedata = /Volumes/Pegasus32 R8/dihca/source_data
 subcubes = /Volumes/Pegasus32 R8/dihca/results/${name}/c5c8/per_hot_core/
