--- a/configs/extracted/IRAS_180891732_hmc1.cfg
+++ b/configs/extracted/IRAS_180891732_hmc1.cfg
@@ -1,10 +1,11 @@
 [INFO]
 name = IRAS_180891732
+alma = 1
 ra = 18h11m51.45454s
 dec = -17d31m28.8163s
 frame = icrs
-distance = 3.6 kpc
-vlsr = 32.9 km/s
+distance = 2.34 kpc
+vlsr = 32.88 km/s
 radius = 0.036 arcsec
 sourcedata = /Volumes/Pegasus32 R8/dihca/source_data
 subcubes = /Volumes/Pegasus32 R8/dihca/results/${name}/c5c8/per_hot_core/
