--- a/configs/extracted/IRAS_180891732_hmc2.cfg
+++ b/configs/extracted/IRAS_180891732_hmc2.cfg
@@ -1,10 +1,11 @@
 [INFO]
 name = IRAS_180891732
+alma = 3
 ra = 18h11m51.39962s
 dec = -17d31m29.9457s
 frame = icrs
-distance = 3.6 kpc
-vlsr = 32.9 km/s
+distance = 2.34 kpc
+vlsr = 33.02 km/s
 radius = 0.026 arcsec
 sourcedata = /Volumes/Pegasus32 R8/dihca/source_data
 subcubes = /Volumes/Pegasus32 R8/dihca/results/${name}/c5c8/per_hot_core/
