--- a/configs/extracted/NGC_6334_I_N_hmc1.cfg
+++ b/configs/extracted/NGC_6334_I_N_hmc1.cfg
@@ -1,12 +1,15 @@
 [INFO]
 name = NGC_6334_I_N
+alma = 2
 #ra = 17h20m54.59259s
 #dec = -35d45m17.3664586427s
 ra = 17h20m54.59280s
 dec = -35d45m17.3686s
 frame = icrs
-distance = 1.7 kpc
-vlsr = -5.0 km/s
+distance = 1.35 kpc
+#vlsr = -7.59 km/s
+# From line profile at peak
+vlsr = 0.74 km/s
 radius = 0.044 arcsec
 sourcedata = /Volumes/Pegasus32 R8/dihca/source_data
 subcubes = /Volumes/Pegasus32 R8/dihca/results/${name}/c5c8/per_hot_core/
