--- a/configs/extracted/NGC_6334_I_N_hmc2.cfg
+++ b/configs/extracted/NGC_6334_I_N_hmc2.cfg
@@ -1,12 +1,13 @@
 [INFO]
 name = NGC_6334_I_N
+alma = 1
 #ra = 17h20m55.19122s
 #dec = -35d45m03.9506457765s
 ra = 17h20m55.19138s
 dec = -35d45m03.9525s
 frame = icrs
-distance = 1.7 kpc
-vlsr = -5.0 km/s
+distance = 1.35 kpc
+vlsr = -1.77 km/s
 radius = 0.049 arcsec
 sourcedata = /Volumes/Pegasus32 R8/dihca/source_data
 subcubes = /Volumes/Pegasus32 R8/dihca/results/${name}/c5c8/per_hot_core/
