--- a/configs/extracted/NGC_6334_I_N_hmc4.cfg
+++ b/configs/extracted/NGC_6334_I_N_hmc4.cfg
@@ -1,12 +1,13 @@
 [INFO]
 name = NGC_6334_I_N
+alma = 4
 #ra = 17h20m54.87219s
 #dec = -35d45m06.4298713643s
 ra = 17h20m54.87122s
 dec = -35d45m06.4309s
 frame = icrs
-distance = 1.7 kpc
-vlsr = -5.0 km/s
+distance = 1.35 kpc
+vlsr = -6.7 km/s
 radius = 0.040 arcsec
 sourcedata = /Volumes/Pegasus32 R8/dihca/source_data
 subcubes = /Volumes/Pegasus32 R8/dihca/results/${name}/c5c8/per_hot_core/
