--- a/configs/extracted/W33A_hmc1.cfg
+++ b/configs/extracted/W33A_hmc1.cfg
@@ -1,10 +1,11 @@
 [INFO]
 name = W33A
+alma = 1
 ra = 18h14m39.51004s
 dec = -17d52m00.1338s
 frame = icrs
-distance = 3.8 kpc
-vlsr = 37.9 km/s
+distance = 2.53 kpc
+vlsr = 37.94 km/s
 radius = 0.0187 arcsec
 sourcedata = /Volumes/Pegasus32 R8/dihca/source_data
 subcubes = /Volumes/Pegasus32 R8/dihca/results/${name}/c5c8/per_hot_core/
