--- a/configs/G34.43+0.24MM2.cfg
+++ b/configs/G34.43+0.24MM2.cfg
@@ -259,3 +259,9 @@ file = ${cubesdir}/c5c8_CH3OH/G34.43+0.24MM2_spw0_0-1000.image.fits
 rms = 1.7 mJy/beam
 molecules = CH3OH
 
+[b6_c5c8_spw3]
+type = spectral_cube
+file = ${cubesdir}/c5c8_spw3/G34.43+0.24MM2_spw3.image.fits
+rms = 1.8 mJy/beam
+molecules = CH3CN HC3N
+
