--- a/configs/IRAS_18182-1433.cfg
+++ b/configs/IRAS_18182-1433.cfg
@@ -6,7 +6,7 @@ frame = icrs
 basedir = /data/share/binary_project/IRAS_18182/IRAS_18182-1433
 sourcedata = /Volumes/Pegasus32 R8/dihca/source_data
 cubesdir = /Volumes/Pegasus32 R8/dihca/source_data/clean_cubes/
-distance = 3.6 kpc
+distance = 3.58 kpc
 vlsr = 59.0 km/s
 
 [ALMA1]
@@ -98,4 +98,10 @@ type = spectral_cube
 file = ${cubesdir}/c5c8_CH3OH/IRAS_18182-1433_spw0_0-1000.image.fits
 rms = 1.4 mJy/beam
 molecules = CH3OH
+
+[b6_c5c8_spw3]
+type = spectral_cube
+file = ${cubesdir}/c5c8_spw3/IRAS_18182-1433_spw3.image.fits
+rms = 1.4 mJy/beam
+molecules = CH3CN HC3N
 
