--- a/configs/extracted/G11.92-0.61_hmc1.cfg
+++ b/configs/extracted/G11.92-0.61_hmc1.cfg
@@ -3,8 +3,10 @@ name = G11.92-0.61
 ra = 18h13m58.11097s
 dec = -18d54m20.2010s
 frame = icrs
+# Parallax
 distance = 3.37 kpc
-vlsr = 34.8 km/s
+# Paper III
+vlsr = 35.1 km/s
 radius = 0.0534 arcsec
 sourcedata = /Volumes/Pegasus32 R8/dihca/source_data
 subcubes = /Volumes/Pegasus32 R8/dihca/results/${name}/c5c8/per_hot_core/
