--- a/configs/extracted/G11.92-0.61_hmc2.cfg
+++ b/configs/extracted/G11.92-0.61_hmc2.cfg
@@ -3,8 +3,10 @@ name = G11.92-0.61
 ra = 18h13m58.12719s
 dec = -18d54m20.7199s
 frame = icrs
+# Parallax
 distance = 3.37 kpc
-vlsr = 35.0 km/s
+# From mom 1 CH3CN 12-11 K2
+vlsr = 37.0 km/s
 radius = 0.0289 arcsec
 sourcedata = /Volumes/Pegasus32 R8/dihca/source_data
 subcubes = /Volumes/Pegasus32 R8/dihca/results/${name}/c5c8/per_hot_core/
