--- a/configs/extracted/G29.96-0.02_hmc2.cfg
+++ b/configs/extracted/G29.96-0.02_hmc2.cfg
@@ -3,8 +3,9 @@ name = G29.96-0.02
 ra = 18h46m03.74155s
 dec = -02d39m22.4352s
 frame = icrs
-distance = 3.5 kpc
-vlsr = 98.0 km/s
+distance = 5.26 kpc
+# From mom 1 CH3CN 12-11 K2
+vlsr = 97.9 km/s
 radius = 0.06 arcsec
 sourcedata = /Volumes/Pegasus32 R8/dihca/source_data
 subcubes = /Volumes/Pegasus32 R8/dihca/results/${name}/c5c8/per_hot_core/
