--- a/configs/extracted/G333.12-0.56_hmc1.cfg
+++ b/configs/extracted/G333.12-0.56_hmc1.cfg
@@ -3,8 +3,9 @@ name = G333.12-0.56
 ra = 16h21m35.37589s
 dec = -50d40m56.6044s
 frame = icrs
-distance = 2.4 kpc
-vlsr = -56.4 km/s
+distance = 3.3 kpc
+# Paper III
+vlsr = -58.47 km/s
 radius = 0.0698 arcsec
 sourcedata = /Volumes/Pegasus32 R8/dihca/source_data
 subcubes = /Volumes/Pegasus32 R8/dihca/results/${name}/c5c8/per_hot_core/
