--- a/configs/extracted/G333.12-0.56_hmc2.cfg
+++ b/configs/extracted/G333.12-0.56_hmc2.cfg
@@ -3,8 +3,9 @@ name = G333.12-0.56
 ra = 16h21m36.25475s
 dec = -50d40m47.2340s
 frame = icrs
-distance = 2.4 kpc
-vlsr = -56.4 km/s
+distance = 3.3 kpc
+# Paper III
+vlsr = -54.10 km/s
 radius = 0.047 arcsec
 sourcedata = /Volumes/Pegasus32 R8/dihca/source_data
 subcubes = /Volumes/Pegasus32 R8/dihca/results/${name}/c5c8/per_hot_core/
