--- a/configs/extracted/G333.46-0.16_hmc1.cfg
+++ b/configs/extracted/G333.46-0.16_hmc1.cfg
@@ -1,10 +1,14 @@
 [INFO]
 name = G333.46-0.16
-ra = 16h21m20.18163s
-dec = -50d09m46.4200s
+#ra = 16h21m20.18163s
+#dec = -50d09m46.4200s
+# Recentred from Gaussian fit
+ra = 16h21m20.17674s
+dec = -50d09m46.3768s
 frame = icrs
-distance = 2.4 kpc
-vlsr = -42.5 km/s
+distance = 2.9 kpc
+# Paper III
+vlsr = -43.55 km/s
 radius = 0.164 arcsec
 sourcedata = /Volumes/Pegasus32 R8/dihca/source_data
 subcubes = /Volumes/Pegasus32 R8/dihca/results/${name}/c5c8/per_hot_core/
