--- a/configs/extracted/IRAS_165623959_hmc2.cfg
+++ b/configs/extracted/IRAS_165623959_hmc2.cfg
@@ -4,7 +4,9 @@ ra = 16h59m41.08769s
 dec = -40d03m39.0848s
 frame = icrs
 distance = 1.7 kpc
-vlsr = -14.0 km/s
+#vlsr = -14.0 km/s
+# From line profile at peak
+vlsr = -11.65 km/s
 radius = 0.044 arcsec
 sourcedata = /Volumes/Pegasus32 R8/dihca/source_data
 subcubes = /Volumes/Pegasus32 R8/dihca/results/${name}/c5c8/per_hot_core/
