--- a/configs/extracted/IRAS_18182-1433_hmc1.cfg
+++ b/configs/extracted/IRAS_18182-1433_hmc1.cfg
@@ -1,10 +1,11 @@
 [INFO]
 name = IRAS_18182-1433
+alma = 2
 ra = 18h21m08.97822s
 dec = -14d31m47.5970s
 frame = icrs
-distance = 3.6 kpc
-vlsr = 59.0 km/s
+distance = 3.58 kpc
+vlsr = 60.64 km/s
 radius = 0.053 arcsec
 sourcedata = /Volumes/Pegasus32 R8/dihca/source_data
 subcubes = /Volumes/Pegasus32 R8/dihca/results/${name}/c5c8/per_hot_core/
@@ -20,10 +21,45 @@ rms = 1.4 mJy/beam
 molecules = CH3OH
 chan_width = 976 kHz
 
+[b6_c5c8_spw3]
+type = spectral_cube
+file = ${subcubes}/spw3_from_CH3CN.structure131.subcube.fits
+rms = 1.4 mJy/beam
+molecules = CH3CN
+chan_width = 488 kHz
+
 [b6_c5c8_spw0_1000_CH3OH_18_3_15_-17_4_14_A_vt_0]
 type = spectral_cube
 file = ../results/IRAS_18182-1433/c5c8/per_hot_core/line_cubes/hmc1_CH3OH_18_3_15_-17_4_14_A_vt_0_nchans40.fits
 rms = 1.4 mJy/beam
 molecules = CH3OH
 chan_width = 976 kHz
+
+[b6_c5c8_spw3_CH3CN_12_2_-11_2_]
+type = spectral_cube
+file = ../results/IRAS_18182-1433/c5c8/per_hot_core/line_cubes/hmc1_CH3CN_12_2_-11_2__nchans40.fits
+rms = 1.4 mJy/beam
+molecules = CH3CN
+chan_width = 488 kHz
+
+[b6_c5c8_spw3_CH3CN_12_3_-11_3_]
+type = spectral_cube
+file = ../results/IRAS_18182-1433/c5c8/per_hot_core/line_cubes/hmc1_CH3CN_12_3_-11_3__nchans40.fits
+rms = 1.4 mJy/beam
+molecules = CH3CN
+chan_width = 488 kHz
+
+[b6_c5c8_spw3_CH3CN_12_4_-11_4_]
+type = spectral_cube
+file = ../results/IRAS_18182-1433/c5c8/per_hot_core/line_cubes/hmc1_CH3CN_12_4_-11_4__nchans40.fits
+rms = 1.4 mJy/beam
+molecules = CH3CN
+chan_width = 488 kHz
+
+[b6_c5c8_spw3_CH3CN_12_8_-11_8_]
+type = spectral_cube
+file = ../results/IRAS_18182-1433/c5c8/per_hot_core/line_cubes/hmc1_CH3CN_12_8_-11_8__nchans40.fits
+rms = 1.4 mJy/beam
+molecules = CH3CN
+chan_width = 488 kHz
 
