--- a/configs/extracted/NGC_6334_I_N_hmc3.cfg
+++ b/configs/extracted/NGC_6334_I_N_hmc3.cfg
@@ -1,12 +1,13 @@
 [INFO]
 name = NGC_6334_I_N
+alma = 6
 #ra = 17h20m54.61936s
 #dec = -35d45m08.6730547234s
 ra = 17h20m54.61962s
 dec = -35d45m08.6715s
 frame = icrs
-distance = 1.7 kpc
-vlsr = -5.0 km/s
+distance = 1.35 kpc
+vlsr = -7.2 km/s
 radius = 0.032 arcsec
 sourcedata = /Volumes/Pegasus32 R8/dihca/source_data
 subcubes = /Volumes/Pegasus32 R8/dihca/results/${name}/c5c8/per_hot_core/
