--- a/configs/extracted/pvmaps/IRAS_18182-1433_hmc4_rotation.cfg
+++ b/configs/extracted/pvmaps/IRAS_18182-1433_hmc4_rotation.cfg
@@ -1,6 +1,6 @@
 [DEFAULT]
 moldir = /Volumes/Pegasus32 R8/dihca/scripts/molecules
-pas = 55 90 145 180 deg
+pas = 40 130 deg
 
 [CH3OH_spw0]
 molecule = CH3OH
