Update config files

--- a/configs/IRDC_182231243.cfg
+++ b/configs/IRDC_182231243.cfg
@@ -139,3 +139,8 @@ file = ${cubesdir}/c5c8_CH3OH/IRDC_182231243_spw0_0-1000.image.fits
 rms = 1.3 mJy/beam
 molecules = CH3OH
 
+[b6_c5c8_spw3]
+type = spectral_cube
+file = ${cubesdir}/c5c8_spw3/IRDC_182231243_spw3.image.fits
+rms = 1.4 mJy/beam
+molecules = CH3CN
