--- a/configs/G24.60+0.08.cfg
+++ b/configs/G24.60+0.08.cfg
@@ -6,8 +6,8 @@ frame = icrs
 basedir = /data/share/binary_project/G24.6/G24.60+0.08
 sourcedata = /Volumes/Pegasus32 R8/dihca/source_data
 cubesdir = /Volumes/Pegasus32 R8/dihca/source_data/clean_cubes/
-distance = 3.6 kpc
-vlsr = 53.4 km/s
+distance = 3.45 kpc
+vlsr = 52.5 km/s
 
 [ALMA1]
 name = ALMA1
@@ -98,4 +98,10 @@ type = spectral_cube
 file = ${cubesdir}/c5c8_CH3OH/G24.60+0.08_spw0_0-1000.image.fits
 rms = 2.4 mJy/beam
 molecules = CH3OH
+
+[b6_c5c8_spw3]
+type = spectral_cube
+file = ${cubesdir}/c5c8_spw3/G24.60+0.08_spw3.image.fits
+rms = 2.2 mJy/beam
+molecules = CH3CN
 
