--- a/configs/IRAS_181511208.cfg
+++ b/configs/IRAS_181511208.cfg
@@ -147,3 +147,9 @@ file = ${cubesdir}/c5c8_CH3OH/IRAS_181511208_spw0_0-1000.image.fits
 rms = 1.2 mJy/beam
 molecules = CH3OH
 
+[b6_c5c8_spw3]
+type = spectral_cube
+file = ${cubesdir}/c5c8_spw3/IRAS_181511208_spw3.image.fits
+rms = 1.3 mJy/beam
+molecules = CH3CN
+
