Implement feria MCMC

--- a/configs/templates/feria_template.in
+++ b/configs/templates/feria_template.in
@@ -1,4 +1,4 @@
-parameter	# Name of the output fits file, 'parameter' to name after the parameters
+$output 	# Name of the output fits file, 'parameter' to name after the parameters
 n           # Overwrite? (y/n)
 
 ### Parameters for the source ###
