--- a/configs/extracted/pvmaps/G335.579-0.272_hmc2_rotation.cfg
+++ b/configs/extracted/pvmaps/G335.579-0.272_hmc2_rotation.cfg
@@ -1,6 +1,7 @@
 [DEFAULT]
 moldir = /Volumes/Pegasus32 R8/dihca/scripts/molecules
 pas = 198 202 288 292 deg
+disk_pa = 202
 
 [CH3OH_spw0]
 molecule = CH3OH
