Fix y axis units

--- a/configs/plots/papers/group_pv_maps.4.cfg
+++ b/configs/plots/papers/group_pv_maps.4.cfg
@@ -63,7 +63,7 @@ function = piecewise_powerlaw
 xrange = -0.495 0.495 arcsec
 coeficients = -18.08615898447974 0.03076923076923077 0.5589393164805655 -48.58472784150222 0.03939858396674608
 sampling = 500
-yunit = arcsec
+yunit = km/s
 
 [G335.579_hmc1_pvmap_out]
 loc = 0 1
