--- a/configs/plots/papers/group_pv_maps.4.cfg
+++ b/configs/plots/papers/group_pv_maps.4.cfg
@@ -57,12 +57,20 @@ hlines = -53.1 km/s
 # Contours
 vmax = 16 mJy/beam
 
+[G335.579_hmc2_pvmap_rot_edge]
+loc = 0 0
+source = G335.579-0.272
+paval = 202
+structured_array = ${G335.579_hmc2_pvmap_rot:results}/${source}_hmc2_rotation.CH3OH_spw0.ra247.74430_dec-48.73089.PA${paval}.edge.dat
+color = b
+
 [G335.579_hmc2_pvmap_rot_edge_fit]
 loc = 0 0
 function = piecewise_powerlaw
 xrange = -0.495 0.495 arcsec
 coeficients = -18.08615898447974 0.03076923076923077 0.5589393164805655 -48.58472784150222 0.03939858396674608
 sampling = 500
+color = r
 yunit = km/s
 
 [G335.579_hmc1_pvmap_out]
