Include additional sources

--- a/configs/extracted/summary.cfg
+++ b/configs/extracted/summary.cfg
@@ -1,5 +1,6 @@
 [DEFAULT]
 results = /Volumes/Pegasus32 R8/dihca/results
+basedir = ${results}/${name}/c5c8/per_hot_core/
 
 [G335.579-0.272_hmc2]
 name = G335.579-0.272
@@ -7,6 +8,18 @@ hmc = 2
 distance = 3.25 kpc
 vlsr = -53.1 km/s
 pa = 202
-basedir = ${results}/${name}/c5c8/per_hot_core/
 pvmap = ${basedir}/hmc2_pvmaps/${name}_hmc2_rotation.CH3OH_spw0.ra247.74430_dec-48.73089.PA${pa}.fits
 pvnoise = 1.5 mJy/beam
+pvnsigma = 3
+pvquadrant = 1
+
+[G335.78+0.17_hmc1]
+name = G335.78+0.17
+hmc = 1
+distance = 3.2 kpc
+vlsr = -48.94 km/s
+pa = 34
+pvmap = ${basedir}/hmc1_pvmaps/${name}_hmc1_rotation.CH3OH_spw0.ra247.44723_dec-48.26452.PA${pa}.fits
+pvnoise = 1.8 mJy/beam
+pvnsigma = 5
+pvquadrant = 2
