--- a/configs/plots/papers/group_pv_maps.4.cfg
+++ b/configs/plots/papers/group_pv_maps.4.cfg
@@ -55,25 +55,46 @@ stretch = linear
 # Vlsr
 hlines = -53.1 km/s
 # Contours
+rms = 1.5 mJy/beam
 vmax = 16 mJy/beam
 
 [G335.579_hmc2_pvmap_rot_edge]
 loc = 0 0
-source = G335.579-0.272
-paval = 202
-structured_array = ${G335.579_hmc2_pvmap_rot:results}/${source}_hmc2_rotation.CH3OH_spw0.ra247.74430_dec-48.73089.PA${paval}.edge.dat
-color = b
+color = #46eff2
+marker = o
+linestyle = none
+plot_keys = OFFSET, VRAD
+structured_array = /Volumes/Pegasus32 R8/dihca/results/G335.579-0.272/c5c8/per_hot_core/hmc2_pvmaps/G335.579-0.272_hmc2_rotation.CH3OH_spw0.ra247.74430_dec-48.73089.PA202.edge.dat
+
+[G335.579_hmc2_pvmap_rot_edge_kepfit]
+loc = 0 0
+function = piecewise_powerlaw
+xrange = -0.4950000000000396 0.4950000000000396 arcsec
+yunit = km / s
+linestyle = --
+color = #eb5252
+model_amplitude = -16.60530381698256
+model_x_0 = 0.03076923076923077
+model_alpha = 0.5
+model_cons = -48.44009310681318
+model_x_mid = 0.03360649691241415
+coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_cons} ${model_x_mid}
 
 [G335.579_hmc2_pvmap_rot_edge_fit]
 loc = 0 0
 function = piecewise_powerlaw
-xrange = -0.495 0.495 arcsec
-coeficients = -18.08615898447974 0.03076923076923077 0.5589393164805655 -48.58472784150222 0.03939858396674608
-sampling = 500
-color = r
+xrange = -0.4950000000000396 0.4950000000000396 arcsec
 yunit = km/s
+linestyle = -
+color = #adacac
+model_amplitude = -18.08615898447974
+model_x_0 = 0.03076923076923077
+model_alpha = 0.5589393164805655
+model_cons = -48.58472784150222
+model_x_mid = 0.03939858396674608
+coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_cons} ${model_x_mid}
 
-[G335.579_hmc1_pvmap_out]
+[G335.579_hmc2_pvmap_out]
 loc = 0 1
 source = G335.579-0.272
 paval = 292
@@ -88,6 +109,7 @@ stretch = linear
 hlines = -53.1 km/s
 # Contours
 vmax = 16 mJy/beam
+rms = 1.5 mJy/beam
 
 [G335.78_hmc1_pvmap_rot]
 loc = 1 0
@@ -104,6 +126,44 @@ stretch = linear
 hlines = -48.94 km/s
 # Contours
 vmax = 40 mJy/beam
+
+[G335.78_hmc1_pvmap_rot_edge]
+loc = 1 0
+structured_array = /Volumes/Pegasus32 R8/dihca/results/G335.78+0.17/c5c8/per_hot_core/hmc1_pvmaps/G335.78+0.17_hmc1_rotation.CH3OH_spw0.ra247.44723_dec-48.26452.PA34.edge.dat
+marker = o
+color = #46eff2
+linestyle = none
+plot_keys = OFFSET, VRAD
+
+[G335.78_hmc1_pvmap_rot_edge_kepfit]
+loc = 1 0
+function = piecewise_powerlaw
+xrange = -0.4900000000000392 0.4900000000000392 arcsec
+yunit = km/s
+sampling = 500
+linestyle = --
+color = #eb5252
+model_amplitude = 12.702071275576817
+model_x_0 = 0.03125
+model_alpha = 0.5
+model_cons = -50.1140464758649
+model_x_mid = 0.013240493106354017
+coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_cons} ${model_x_mid}
+
+[G335.78_hmc1_pvmap_rot_edge_fit]
+loc = 1 0
+function = piecewise_powerlaw
+xrange = -0.4900000000000392 0.4900000000000392 arcsec
+yunit = km/s
+sampling = 500
+linestyle = -
+color = #adacac
+model_amplitude = 21.88451410938025
+model_x_0 = 0.03125
+model_alpha = 0.8208726448044973
+model_cons = -50.599434244681895
+model_x_mid = -0.018216561601604737
+coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_cons} ${model_x_mid}
 
 [G335.78_hmc1_pvmap_out]
 loc = 1 1
