Update directories and add CH3CN

--- a/configs/G35.13-0.74.cfg
+++ b/configs/G35.13-0.74.cfg
@@ -3,9 +3,8 @@ name = G35.13-0.74
 ra = 18h58m06.1369s
 dec = +1d37m07.4283s
 frame = icrs
-basedir = /data/share/binary_project/G35/G35.13-0.74
-sourcedata = /Volumes/Pegasus32 R8/dihca/source_data
-cubesdir = /Volumes/Pegasus32 R8/dihca/source_data/clean_cubes/
+sourcedata = ../source_data
+cubesdir = ../source_data/clean_cubes/
 distance = 2.2 kpc
 vlsr = 35.0 km/s
 
@@ -131,3 +130,8 @@ file = ${cubesdir}/c5c8_CH3OH/G35.13-0.74_spw0_0-1000.image.fits
 rms = 1.8 mJy/beam
 molecules = CH3OH
 
+[b6_c5c8_spw3]
+type = spectral_cube
+file = ${cubesdir}/c5c8_spw3/G35.13-0.74_spw3.image.fits
+rms = 1.9 mJy/beam
+molecules = CH3CN
