--- a/configs/extracted/G35.13-0.74_hmc3.cfg
+++ b/configs/extracted/G35.13-0.74_hmc3.cfg
@@ -6,8 +6,8 @@ frame = icrs
 distance = 2.2 kpc
 vlsr = 35.53 km/s
 radius = 0.038 arcsec
-sourcedata = /Volumes/Pegasus32 R8/dihca/source_data
-subcubes = /Volumes/Pegasus32 R8/dihca/results/${name}/c5c8/per_hot_core/
+sourcedata = ../source_data
+subcubes = ../results/${name}/c5c8/per_hot_core/
 
 [b6_c8_continuum]
 type = fits_file
@@ -20,10 +20,45 @@ rms = 1.8 mJy/beam
 molecules = CH3OH
 chan_width = 976 kHz
 
+[b6_c5c8_spw3]
+type = spectral_cube
+file = ${subcubes}/spw3_from_CH3CN.structure5.subcube.fits
+rms = 1.9 mJy/beam
+molecules = CH3CN
+chan_width = 488 kHz
+
 [b6_c5c8_spw0_1000_CH3OH_18_3_15_-17_4_14_A_vt_0]
 type = spectral_cube
 file = ../results/G35.13-0.74/c5c8/per_hot_core/line_cubes/hmc3_CH3OH_18_3_15_-17_4_14_A_vt_0_nchans40.fits
 rms = 1.8 mJy/beam
 molecules = CH3OH
 chan_width = 976 kHz
+
+[b6_c5c8_spw3_CH3CN_12_2_-11_2_]
+type = spectral_cube
+file = ../results/G35.13-0.74/c5c8/per_hot_core/line_cubes/hmc3_CH3CN_12_2_-11_2__nchans40.fits
+rms = 1.9 mJy/beam
+molecules = CH3CN
+chan_width = 488 kHz
+
+[b6_c5c8_spw3_CH3CN_12_3_-11_3_]
+type = spectral_cube
+file = ../results/G35.13-0.74/c5c8/per_hot_core/line_cubes/hmc3_CH3CN_12_3_-11_3__nchans40.fits
+rms = 1.9 mJy/beam
+molecules = CH3CN
+chan_width = 488 kHz
+
+[b6_c5c8_spw3_CH3CN_12_4_-11_4_]
+type = spectral_cube
+file = ../results/G35.13-0.74/c5c8/per_hot_core/line_cubes/hmc3_CH3CN_12_4_-11_4__nchans40.fits
+rms = 1.9 mJy/beam
+molecules = CH3CN
+chan_width = 488 kHz
+
+[b6_c5c8_spw3_CH3CN_12_8_-11_8_]
+type = spectral_cube
+file = ../results/G35.13-0.74/c5c8/per_hot_core/line_cubes/hmc3_CH3CN_12_8_-11_8__nchans40.fits
+rms = 1.9 mJy/beam
+molecules = CH3CN
+chan_width = 488 kHz
 
