Add more pv angles

--- a/configs/extracted/pvmaps/G35.13-0.74_alma6_rotation.cfg
+++ b/configs/extracted/pvmaps/G35.13-0.74_alma6_rotation.cfg
@@ -1,6 +1,6 @@
 [DEFAULT]
 moldir = ./molecules
-pas = 5 35 65 95 125 155 deg
+pas = -10 0 5 35 65 80 90 95 125 155 deg
 
 [CH3OH_spw0]
 molecule = CH3OH
