--- a/configs/extracted/G10.62-0.38_alma1b.cfg
+++ b/configs/extracted/G10.62-0.38_alma1b.cfg
@@ -1,12 +1,10 @@
 [INFO]
 name = G10.62-0.38
-# Position from point region in continuum
 ra = 18h10m28.6908s
-dec = -19h55mm49.827s
+dec = -19d55m49.827s
 frame = icrs
 distance = 4.95 kpc
 vlsr = 0.851 km/s
-# Radius from contour
 radius = 0.029 arcsec
 sourcedata = ../source_data
 subcubes = ../results/${name}/c5c8/per_hot_core/
@@ -18,6 +16,34 @@ file = ${sourcedata}/continuum/G10.62-0.38.config8.cont_avg.selfcal_0.5_hogbom.i
 [b6_c5c8_spw3]
 type = spectral_cube
 file = ${subcubes}/spw3_from_CH3CN.structure61.subcube.fits
+rms = 1.5 mJy/beam
+molecules = CH3CN
+chan_width = 488 kHz
+
+[b6_c5c8_spw3_CH3CN_12_2_-11_2_]
+type = spectral_cube
+file = ../results/G10.62-0.38/c5c8/per_hot_core/line_cubes/alma1b_CH3CN_12_2_-11_2__nchans40.fits
+rms = 1.5 mJy/beam
+molecules = CH3CN
+chan_width = 488 kHz
+
+[b6_c5c8_spw3_CH3CN_12_3_-11_3_]
+type = spectral_cube
+file = ../results/G10.62-0.38/c5c8/per_hot_core/line_cubes/alma1b_CH3CN_12_3_-11_3__nchans40.fits
+rms = 1.5 mJy/beam
+molecules = CH3CN
+chan_width = 488 kHz
+
+[b6_c5c8_spw3_CH3CN_12_4_-11_4_]
+type = spectral_cube
+file = ../results/G10.62-0.38/c5c8/per_hot_core/line_cubes/alma1b_CH3CN_12_4_-11_4__nchans40.fits
+rms = 1.5 mJy/beam
+molecules = CH3CN
+chan_width = 488 kHz
+
+[b6_c5c8_spw3_CH3CN_12_8_-11_8_]
+type = spectral_cube
+file = ../results/G10.62-0.38/c5c8/per_hot_core/line_cubes/alma1b_CH3CN_12_8_-11_8__nchans40.fits
 rms = 1.5 mJy/beam
 molecules = CH3CN
 chan_width = 488 kHz
