--- a/configs/extracted/NGC_6334_I_N_alma11.cfg
+++ b/configs/extracted/NGC_6334_I_N_alma11.cfg
@@ -1,11 +1,8 @@
 [INFO]
 name = NGC_6334_I_N
 alma = 11
-#ra = 17h20m54.83885s
-#dec = -35d45m06.0538803313s
 ra = 17h20m54.83871s
 dec = -35d45m06.0527s
-#PA = 10
 frame = icrs
 distance = 1.35 kpc
 vlsr = -5.0 km/s
@@ -36,5 +33,33 @@ type = spectral_cube
 file = ../results/NGC_6334_I_N/c5c8/per_hot_core/line_cubes/hmc5_CH3OH_18_3_15_-17_4_14_A_vt_0_nchans40.fits
 rms = 1.6 mJy/beam
 molecules = CH3OH
+chan_width = 488 kHz
+
+[b6_c5c8_spw3_CH3CN_12_2_-11_2_]
+type = spectral_cube
+file = ../results/NGC_6334_I_N/c5c8/per_hot_core/line_cubes/alma11_CH3CN_12_2_-11_2__nchans40.fits
+rms = 1.8 mJy/beam
+molecules = CH3CN
+chan_width = 488 kHz
+
+[b6_c5c8_spw3_CH3CN_12_3_-11_3_]
+type = spectral_cube
+file = ../results/NGC_6334_I_N/c5c8/per_hot_core/line_cubes/alma11_CH3CN_12_3_-11_3__nchans40.fits
+rms = 1.8 mJy/beam
+molecules = CH3CN
+chan_width = 488 kHz
+
+[b6_c5c8_spw3_CH3CN_12_4_-11_4_]
+type = spectral_cube
+file = ../results/NGC_6334_I_N/c5c8/per_hot_core/line_cubes/alma11_CH3CN_12_4_-11_4__nchans40.fits
+rms = 1.8 mJy/beam
+molecules = CH3CN
+chan_width = 488 kHz
+
+[b6_c5c8_spw3_CH3CN_12_8_-11_8_]
+type = spectral_cube
+file = ../results/NGC_6334_I_N/c5c8/per_hot_core/line_cubes/alma11_CH3CN_12_8_-11_8__nchans40.fits
+rms = 1.8 mJy/beam
+molecules = CH3CN
 chan_width = 488 kHz
 
